--- a/components/com_kunena/admin/language/af-ZA/af-ZA.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/af-ZA/af-ZA.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES="Sluit kategoriee in"
 COM_KUNENA_A_RSS_LIMIT="RSS limiet"
 ; COM_KUNENA_A_RSS_LIMIT_DESC="You can also limit the number of items in your RSS feeds. Use this, if the timelimit is not enough. Can be used with, or without, a timelimit.<br />Use 0 or leave empty for no limit."
 COM_KUNENA_A_RSS_OLD_TITLES="Gebruik dir ou styl tittels"
-; COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>No</u> - Titles will be kept intact, looking like this: \'#post title#\'<br /><u>Yes</u> - Titles will look like this: \'Subject: #post title# - By: #author#\'"
+; COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>No</u> - Titles will be kept intact, looking like this: \\'#post title#\\'<br /><u>Yes</u> - Titles will look like this: \\'Subject: #post title# - By: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS spesifikasie"
 COM_KUNENA_A_RSS_SPEC_DESC="Spesifiseer 'n pasgemaakte formaat vir alle RSS feeds."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS geskiedenis (tyd limiet)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP adres naspooring"
 ; COM_KUNENA_A_IP_TRACKING_DESC="If set to <em>Yes</em>, forum will record IP address for every posted message (excluding anonymous posting feature). While the feature can be very useful when fighting against spam and malicious users, storing IP address without making users to accept it in the terms may be illegal in some countries."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
