--- a/components/com_kunena/admin/language/da-DK/da-DK.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/da-DK/da-DK.com_kunena.views.ini
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP Address sporing"
 COM_KUNENA_A_IP_TRACKING_DESC="Hvis sat til <em>Ja</em>, vil forumet gemme IP addresse på ethvert indlæg (undtagen anonyme indlæg). Dette kan være nyttigt i kampen mod spam og onde brugere, men kan være ulovligt i visse lande."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Tillad Gæster at se status link"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Sæt til Ja for at tillade gæster at se Status link"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
