--- a/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/de-DE/de-DE.com_kunena.views.ini
@@ -136,8 +136,8 @@ COM_KUNENA_A_AUTOEMBEDYOUTUBE="Automatisches Einbetten von YouTube-Videos"
 COM_KUNENA_A_AUTOEMBEDYOUTUBE_DESC="Wähle &bdquo;Ja&ldquo;, wenn YouTube Video-URLs automatisch eingebettet werden sollen."
 COM_KUNENA_A_AUTOLINK="Auto-Link URLs"
 COM_KUNENA_A_AUTOLINK_DESC="Ist hier &bdquo;Ja&ldquo; gewählt, dann werden eingefügte Webadressen in den Beiträgen automatisch zu anklickbaren URLs umgewandelt."
-COM_KUNENA_A_AVATARGALLERY="Avatargallerie benutzen"
-COM_KUNENA_A_AVATARGALLERY_DESC="Wähle &bdquo;Ja&ldquo;, damit registrierte Benutzer einen Avatar aus der bereitgestellten Gallerie (components/com_kunena/avatars/gallery) auswählen können."
+COM_KUNENA_A_AVATARGALLERY="Avatargalerie benutzen"
+COM_KUNENA_A_AVATARGALLERY_DESC="Wähle &bdquo;Ja&ldquo;, damit registrierte Benutzer einen Avatar aus der bereitgestellten Galerie (media/kunena/avatars/gallery) auswählen können."
 COM_KUNENA_A_AVATARUPLOAD="Hochladen von Avatars erlauben"
 COM_KUNENA_A_AVATARUPLOAD_DESC="Wähle &bdquo;Ja&ldquo;, wenn du willst, dass registrierte Benutzer Avatars hochladen können."
 COM_KUNENA_A_AVATAR_SETTINGS="Avatar Einstellungen"
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Eine Liste von Kategorie-IDs (durch K
 COM_KUNENA_A_RSS_LIMIT="RSS Limit"
 COM_KUNENA_A_RSS_LIMIT_DESC="Anzahl der Einträge im RSS Feed limitieren. Dies kann benutzt werden, wenn das Zeitlimit nicht genug ist. Funktioniert mit oder ohne Zeitlimit.<br />Um kein Limit zu setzen, entweder 0 eintragen, oder das Feld leer lassen."
 COM_KUNENA_A_RSS_OLD_TITLES="Alten Titelstil benutzen"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nein</u> - Titel bleiben erhalten und sehen so aus: \'#post title#\'<br /><u>Ja</u> - Titel sehen so aus: \'Betreff: #post title# - von: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nein</u> - Titel bleiben erhalten und sehen so aus: \\'#post title#\\'<br /><u>Ja</u> - Titel sehen so aus: \\'Betreff: #post title# - von: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS Spezifikation"
 COM_KUNENA_A_RSS_SPEC_DESC="Wähle ein Format für alle RSS Feeds aus."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS Zeitspanne"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP-Addressen aufzeichnen"
 COM_KUNENA_A_IP_TRACKING_DESC="Wenn hier&bdquo;Ja&ldquo; gewählt ist, wird in jedem Beitrag die IP Adresse aufgezeichnet (ausgenommen dort, wo anonymes Schreiben erlaubt ist). Diese Funktion kann sehr nützlich sein, aber es ist zu beachten, dass es in manchen Ländern verboten ist, die IP Adressen ohne die Einwilligung der Benutzer zu speichern."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Gästen erlauben, Links zu den Statistiken zu sehen"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Wähle &bdquo;Ja&ldquo;, wenn es Gästen erlaubt sein soll, die Links zu sehen, welche zu den Statistiken führen."
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Superadmins in Benutzerliste anzeigen."
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Mit dieser Option können Superadmins in der Benutzerliste ein- oder ausgeblendet werden."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
