--- a/components/com_kunena/admin/language/es-ES/es-ES.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/es-ES/es-ES.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Especifique una lista de categorías 
 COM_KUNENA_A_RSS_LIMIT="Límite RSS"
 COM_KUNENA_A_RSS_LIMIT_DESC="Usted también puede limitar el número de elementos de sus canales RSS. Utilice esto, si el límite de tiempo no es suficiente. Se puede usar con ó sin un límite de tiempo.<br />Use 0 o déjelo en blanco para no tener ningún límite."
 COM_KUNENA_A_RSS_OLD_TITLES="Usar Títulos de Estilo Antiguo"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>No</u> - Los títulos se mantendrán intactos, se mostraran de la siguiente manera: \'#título de la entrada#\'<br /><u>Sí</u> - Los títulos se mostraran de la siguiente manera: \'Asunto: #título del tema# - Por: #autor#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>No</u> - Los títulos se mantendrán intactos, se mostraran de la siguiente manera: \\'#título de la entrada#\\'<br /><u>Sí</u> - Los títulos se mostraran de la siguiente manera: \\'Asunto: #título del tema# - Por: #autor#\\'"
 COM_KUNENA_A_RSS_SPEC="Especificación RSS"
 COM_KUNENA_A_RSS_SPEC_DESC="Especifique un formato personalizado para todas las fuentes RSS."
 COM_KUNENA_A_RSS_TIMELIMIT="Historial RSS (límite de tiempo)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="Seguimiento de Dirección IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Sí es establecido en <em>Si</em>, el componente de foro registrará la dirección IP de cada mensaje enviado (excluyendo la función de posteos anónimos). Esta característica puede ser muy útil cuando se lucha contra los mensajes spam y usuarios maliciosos, almacenar la dirección IP sin que los usuarios lo acepten en los términos y condiciones de registro puede ser ilegal en algunos países."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Permitir que los invitados vean Estadísticas de Links"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Establecer en Sí, para que los usuarios no registrados puedan ver los enlaces de las estadísticas."
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Mostrar Super-Usuario en lista de usuarios"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
