--- a/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/et-EE/et-EE.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Sisesta kategooriate nimekiri (eralda
 COM_KUNENA_A_RSS_LIMIT="RSS limiit"
 COM_KUNENA_A_RSS_LIMIT_DESC="Sa saad piirata ka oma RSS uudisvoos näidatavate kirjete arvu. kasuta seda, kui ajalimiidist ei piisa. Seda võib kasutada kas koos või ilma tähtajata. <br /> Limiidi mitte kasutamiseks sisesta 0 või jäta see lahter tühjaks."
 COM_KUNENA_A_RSS_OLD_TITLES="Kasuta vanas stiilis pealkirju"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ei</u> - Pealkirjad näevad välja sellised: \'#post title#\'<br/><u>Jah</u> - Pealkiri näeb välja selline: \'Pealkiri: #post title# - Autor: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ei</u> - Pealkirjad näevad välja sellised: \\'#post title#\\'<br/><u>Jah</u> - Pealkiri näeb välja selline: \\'Pealkiri: #post title# - Autor: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS spetsifikatsioon"
 COM_KUNENA_A_RSS_SPEC_DESC="Määra kõigi RSS-uudisvoogude jaoks kohandatud vorming."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS ajalugu (ajalimiit)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP-aadressi jälgimine"
 COM_KUNENA_A_IP_TRACKING_DESC="Kui on valitud <em>jah</em>, siis salvestab foorum iga postituse IP aadressi (välja arvatud anonüümse postitamise funktsioon). Kuigi see võib olla väga kasulik rämpspostituste ja libakasutajate vastu võitlemisel, võib mõnes riigis olla IP-aadressi salvestamine ilma kasutaja nõusolekuta seadusevastane."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
