--- a/components/com_kunena/admin/language/fi-FI/fi-FI.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/fi-FI/fi-FI.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Määrittele lista kategorioista (era
 COM_KUNENA_A_RSS_LIMIT="RSS-rajoitus"
 COM_KUNENA_A_RSS_LIMIT_DESC="Voit myös rajoittaa nimikkeiden määrän RSS-syötteessäsi. Käytä tätä, jos aikarajoitus ei riitä. Voit käyttää sitä aikarajoituksen kanssa tai ilman sitä.<br />Käytä 0 tai jätä tyhjäksi, jolloin ei ole rajoitusta."
 COM_KUNENA_A_RSS_OLD_TITLES="Käytä vanhantyylin otsikoita"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ei</u> - Otsikot pidetään ennallaan, tämännäköisinä: \'#viestin otsikko#\'<br /><u>Kyllä</u> - Otsikot näytetään tämännäköisinä: \'Otsikko: #viestin otsikko# - : #kirjoittaja#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ei</u> - Otsikot pidetään ennallaan, tämännäköisinä: \\'#viestin otsikko#\\'<br /><u>Kyllä</u> - Otsikot näytetään tämännäköisinä: \\'Otsikko: #viestin otsikko# - : #kirjoittaja#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS-määrittely"
 COM_KUNENA_A_RSS_SPEC_DESC="Määritä mukautettu muoto kaikille RSS-syötteille."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS-historia (aikarajoitus)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP-osoitteen seuranta"
 COM_KUNENA_A_IP_TRACKING_DESC="Jos asetat <em>Kyllä</em>, foorumi kirjaa jokaisen lähetetyn viestin IP-osoitteen (poislukien anonyymi ominaisuuden lähetykset). Vaikkakin ominaisuus voi olla erittäin hyödyllinen taistelussa spammia ja haittallisia käyttäjiä vastaan tallentamalla IP-osoitteet, mutta jos käyttäjät eivät ole hyväksyneet tätä käyttöehdoissa, se saattaa olla laitonta joissakin maissa. Toisin sanoen, Suomessa käyttäjän tietojen tallentaminen ilman hänen lupaansa on laitonta ellei hän ole erikseen hyväksynyt sitä. Esimerkiksi käyttäjä voidaan pakottaa hyväksymään sivuston käyttöehdot rekisteröitymisen aikana."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Salli vieraiden nähdä tilastolinkki"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Aseta Kyllä, salliaksesi vieraiden nähdä tilastolinkki."
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Näytä pääkäyttäjät käyttäjälistassa"
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Haluatko näyttää pääkäyttäjät käyttäjälistassa?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
@@ -524,7 +526,7 @@ COM_KUNENA_A_RANKS_UPLOAD="Lataa uusi luokituskuva"
 ; JROOT/administrator/components/com_kunena/views/report/tmpl/default.php
 
 COM_KUNENA_REPORT_SELECT_ALL="Valitse kaikki"
-COM_KUNENA_REPORT_SYSTEM_DESC="Kunenan raportointijärjestelmä synnyttää selkeän raportin kaikista kokoonpanoasetuksistasi, jotka helpottavat valvojia foorumilla. Kopioi kaikki asiat allaolevasta kentästä ja liitä ne viestiisi Kunena.com tukifoorumilla saadaksesi apua."
+COM_KUNENA_REPORT_SYSTEM_DESC="Kunenan raportointijärjestelmä synnyttää selkeän raportin kaikista kokoonpanoasetuksistasi, jotka helpottavat valvojia foorumilla. Kopioi kaikki asiat allaolevasta kentästä ja liitä ne viestiisi Kunena.org tukifoorumilla saadaksesi apua."
 
 ; JROOT/administrator/components/com_kunena/views/smilies/tmpl/
 
