--- a/components/com_kunena/admin/language/kz-KZ/kz-KZ.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/kz-KZ/kz-KZ.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Тек қана жалпы арнад
 COM_KUNENA_A_RSS_LIMIT="RSS шектеу"
 COM_KUNENA_A_RSS_LIMIT_DESC="Сіз өзіңіздің RSS-таспаңыздағы бекеттердің санына шектеу қоя аласыз.<br /> Шектеу қоймас үшін 0 санын пайдаланыі немесе бос қалдырыңыз."
 COM_KUNENA_A_RSS_OLD_TITLES="Атауларды ескі стильде пайдалану"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Нет</u> - Атаулар осындай түрде сақталады: \'#post title#\'<br/><u>Да</u> - Атаулар осындай боп көрінеді: \'Тақырып: #post title# - от: #author#\' "
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Нет</u> - Атаулар осындай түрде сақталады: \\'#post title#\\'<br/><u>Да</u> - Атаулар осындай боп көрінеді: \\'Тақырып: #post title# - от: #author#\\' "
 COM_KUNENA_A_RSS_SPEC="RSS тәртптері"
 COM_KUNENA_A_RSS_SPEC_DESC="Барлық RSS-арналарына өзіңіздің жеке форматыңызды орнатыңыз."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS тарихы (мерзім)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="ізін анықтау IP мекнжайы "
 COM_KUNENA_A_IP_TRACKING_DESC="Егер <em> Иә </ EM> деп орнатылған болса, форум IP-мекенжайды әр бір жарияланған хабар бойынша (жасырын хабарлардан басқасын) жазып отырады. Бұл қызмет өте пайдалы болуы мүмкін, қиянат келтіретін қолданушылар мен спаммен күресу кезінде, олардың IP-мекенжайын есте сақтап кейбір елдерде белгілі мерзімге тыйым салынады."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Қонақтарға сілтеме статистикасын көрсету"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Егер қонақтар сілтеме статистикасын көрсін десеңіз Иә мәнін таңдаңыз"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
