--- a/components/com_kunena/admin/language/nb-NO/nb-NO.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/nb-NO/nb-NO.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Angi en liste over kategorier (adskil
 COM_KUNENA_A_RSS_LIMIT="Antall RSS"
 COM_KUNENA_A_RSS_LIMIT_DESC="Du kan også begrense antallet elementer i din RSS-matninger. Bruk dette, hvis tidsbegrensning ikke er nok. Kan brukes med eller uten tidsbegrensning.<br />Bruk 0 eller la stå tom for ingen grense."
 COM_KUNENA_A_RSS_OLD_TITLES="Bruk gammel stil titler"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nei</u> - Titler vil bli holdt intakt, ser ut som dette: \'#post title#\'<br/><u>Ja</u> - Titler vil se slik ut: \'Emne: #post title# - Av: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nei</u> - Titler vil bli holdt intakt, ser ut som dette: \\'#post title#\\'<br/><u>Ja</u> - Titler vil se slik ut: \\'Emne: #post title# - Av: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS Spesifikasjon"
 COM_KUNENA_A_RSS_SPEC_DESC="Angi en egendefinert format for alle rss matninger."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS historie (tidsbegrensning)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="Spore IP-adresser"
 COM_KUNENA_A_IP_TRACKING_DESC="Dersom satt til <em>Ja</em>, vil forumet lagre IP-adresse for hver melding som opprettes (unntatt funksjonen for anonym publisering). Funksjonen kan være svært nyttig når du kjemper mot spam og ondsinnede brukere, men lagring av IP-adressre uten godkjenning fra brukerne kan være ulovlig i enkelte land."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Tillat gjester å se lenke til statistikker"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Satt til Ja for å tillate gjester å se lenke til statistikker."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
