--- a/components/com_kunena/admin/language/nl-NL/nl-NL.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/nl-NL/nl-NL.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Stel hier de categorieën in (geschei
 COM_KUNENA_A_RSS_LIMIT="RSS limiet"
 COM_KUNENA_A_RSS_LIMIT_DESC="U kunt ook het aantal items in uw RSS-feeds zetten. Gebruik deze, indien de tijdslimiet niet goed genoeg is. Kan gebruikt worden met of zonder een tijdslimiet. <br /> Gebruik 0 of laat leeg voor geen limiet."
 COM_KUNENA_A_RSS_OLD_TITLES="Gebruik oldstyle titels"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nee</u> - Titels zullen intact worden gehouden, en zien er als volgt uit: # post \ 'title # \' <br /> <u> Ja </ u> - Titels zullen er zo uitzien: \ 'Onderwerp: #Onderwerp titel #  - Door: # auteur # \ '"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nee</u> - Titels zullen intact worden gehouden, en zien er als volgt uit: # post \\ 'title # \\' <br /> <u> Ja </ u> - Titels zullen er zo uitzien: \\ 'Onderwerp: #Onderwerp titel #  - Door: # auteur # \\ '"
 COM_KUNENA_A_RSS_SPEC="RSS-specificatie"
 COM_KUNENA_A_RSS_SPEC_DESC="Geef een aangepast formaat voor alle RSS-feeds."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS-verleden"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP Address Tracking"
 COM_KUNENA_A_IP_TRACKING_DESC="Indien ingesteld op <em>Ja</em>, zal het forum het IP adres bijhouden voor elk gepost bericht (exclusief de mogelijkheid voor anoniem posten). Hoewel deze mogelijkheid zeer bruikbaar kan zijn in het gevecht tegen spam en kwaadwillende gebruikers, is het opslaan van het IP adres,  zonder dat gebruikers hiermee akkoord zijn gegaan in de voorwaarden, in sommige landen illegaal."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Gasten mogen gebruikerslijst zien"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Indien <em>Ja</em> dan mogen gasten ook de gebruikerslijst zien."
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Toon Super Admin in de gebruikerslijst"
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Moet de Super Admin worden weergegeven in de gebruikerslijst?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
