--- a/components/com_kunena/admin/language/pt-BR/pt-BR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pt-BR/pt-BR.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Especifique uma lista de categorias (
 COM_KUNENA_A_RSS_LIMIT="Limite RSS"
 COM_KUNENA_A_RSS_LIMIT_DESC="Você também pode limitar o número de itens em seus RSS feeds. Use isso, se o tempo limite não for o bastante. Pode ser usado com, ou sem, um tempo limite.<br />Use 0 ou deixe vazio para não limitar."
 COM_KUNENA_A_RSS_OLD_TITLES="Usar títulos no estilo antigo"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Não</u> - Títulos serão mantidos intactos, parecendo com isso: \'#título da postagem#\'<br /><u>Sim</u> - Títulos irão parecer com isso: \'Assunto: #título da postagem# - Por: #autor#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Não</u> - Títulos serão mantidos intactos, parecendo com isso: \\'#título da postagem#\\'<br /><u>Sim</u> - Títulos irão parecer com isso: \\'Assunto: #título da postagem# - Por: #autor#\\'"
 COM_KUNENA_A_RSS_SPEC="Especificação RSS"
 COM_KUNENA_A_RSS_SPEC_DESC="Especifique um formato customizado para todos os rss feeds."
 COM_KUNENA_A_RSS_TIMELIMIT="Histórico do RSS (limite de tempo)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="Rastreando endereço IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Caso definido como <em>Sim</em>, o fórum irá gravar os endereços Ips de cada mensagem postada (Excluindo postagens anônimas). Embora este recurso pode ser muito útil na luta contra spam e usuários maliciosos. O armazenamento de endereços IPs, sem o consentimento dos usuários nos termos e condições do fórum pode ser considerado ilegal em alguns países "
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
