--- a/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pt-PT/pt-PT.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Especificar a lista de categorias (se
 COM_KUNENA_A_RSS_LIMIT="Limite RSS"
 COM_KUNENA_A_RSS_LIMIT_DESC="Pode também limitar o número de itens no RSS feeds. Utilize esta opção se o limite temporal não for suficiente. Pode ser utilizado com e sem limite de tempo.<br />Usar 0 ou deixar vazio para não ter limite."
 COM_KUNENA_A_RSS_OLD_TITLES="Usar estilo antigo para os títulos"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Não</u> - Os títulos não serão alterados e irão aparecer assim: \'#post title#\'<br/><u>Sim</u> - Os títulos serão idênticos a: \'Assunto: #post title# - Por: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Não</u> - Os títulos não serão alterados e irão aparecer assim: \\'#post title#\\'<br/><u>Sim</u> - Os títulos serão idênticos a: \\'Assunto: #post title# - Por: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="Personalizar RSS"
 COM_KUNENA_A_RSS_SPEC_DESC="Especifique um formato personalizado para todos os sinais RSS"
 COM_KUNENA_A_RSS_TIMELIMIT="Histórico RSS (limite temporal)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="Rastreando endereço IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Caso defina como <em>Sim</em>, o fórum irá gravar os endereços IPs de cada mensagem colocada (Excluindo mensagens anónimas). Embora este recurso possa ser muito útil na luta contra spam e utilizadores maliciosos. O armazenamento de endereços IPs, sem o consentimento dos utilizadores nos termos e condições do fórum pode ser considerado ilegal em alguns países."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Permitir que os Visitantes vejam as Estatísticas"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Selecionar Sim para permitir que os Visitantes vejam as Estatísticas"
+COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Mostrar Super Utilizadores na lista de utilizadores"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
