--- a/components/com_kunena/admin/language/sr-YU/sr-YU.com_kunena.ini
+++ b/components/com_kunena/admin/language/sr-YU/sr-YU.com_kunena.ini
@@ -1,13 +1,12 @@
 ; Kunena Forum translation
 ;
-; All translations can be found from https://www.transifex.net/projects/p/Kunena/r/Kunena2/
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
 ; Please join the translation team if you want to contribute your changes to the next release.
 ;
 ; License GNU General Public License version 3 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 ; Using new INI string format for Joomla! 2.5
-
 
 
 ; JROOT/administrator/components/com_kunena/
@@ -18,9 +17,13 @@ COM_KUNENA_A_TEMPLATE_MANAGER_UNINSTALL="Deinstaliraj"
 COM_KUNENA_A_YES="Da"
 COM_KUNENA_DELETE_PERMANENTLY="Obriši"
 COM_KUNENA_NOBODY="Niko"
-; COM_KUNENA_PUBLIC=""
+COM_KUNENA_PUBLIC="Javni pristup"
 COM_KUNENA_TOPLEVEL="Najviši nivo"
-COM_KUNENA_TRASH_USERMESSAGES="Sve poruke u smeće"
-; COM_KUNENA_UNPUBLISHED=""
-; COM_KUNENA_VIEW_MODERATOR=""
+COM_KUNENA_TRASH_MESSAGES="Poruke"
+COM_KUNENA_TRASH_TOPICS="Teme"
+COM_KUNENA_TRASH_USERMESSAGES="Obriši sve poruke"
+COM_KUNENA_UNPUBLISHED="Neobjavljeno"
+
+; Removed strings
+
 COM_KUNENA_VIEW_PMS="Kliknite ovde za slanje privatne poruke ovom korisniku."
