--- a/components/com_kunena/admin/language/sv-SE/sv-SE.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/sv-SE/sv-SE.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Ange en lista med kategorier (separer
 COM_KUNENA_A_RSS_LIMIT="RSS Begränsning"
 COM_KUNENA_A_RSS_LIMIT_DESC="Du kan också begränsa antalet artiklar i din RSS feeds. Använd detta, om tidsgränsen inte är tillräckligt. Kan användas med eller utan en tidsbegränsning.<br />Använd 0 eller lämna tom för att inte begränsa."
 COM_KUNENA_A_RSS_OLD_TITLES="Använd oldstyle titlar"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nej</u> - Titlar kommer att hållas intakt, ser ut så här: \'#post title#\'<br /><u>Ja</u> - Titlar kommer att se ut så här: \'Ämne: #post title# - Av: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Nej</u> - Titlar kommer att hållas intakt, ser ut så här: \\'#post title#\\'<br /><u>Ja</u> - Titlar kommer att se ut så här: \\'Ämne: #post title# - Av: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS Specifikation"
 COM_KUNENA_A_RSS_SPEC_DESC="Ange ett anpassat format för alla rss feeds."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS Historia (tidsgräns)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP-adress-spårning"
 COM_KUNENA_A_IP_TRACKING_DESC="Om <em>Ja</em>, så lagrar forumet IP-adressen för varje postat meddelande. (Undantaget sluten omröstning) Då funktionen kan vara väldigt användbar för bekämpning av spam och liknande kan lagring av IP-adresser vara olagligt i vissa länder."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
