--- a/components/com_kunena/admin/language/tr-TR/tr-TR.com_kunena.ini
+++ b/components/com_kunena/admin/language/tr-TR/tr-TR.com_kunena.ini
@@ -21,7 +21,7 @@ COM_KUNENA_PUBLIC="Genel"
 COM_KUNENA_TOPLEVEL="Üst Düzey Kategori"
 COM_KUNENA_TRASH_MESSAGES="Mesajlar"
 COM_KUNENA_TRASH_TOPICS="Başlık"
-; COM_KUNENA_TRASH_USERMESSAGES="Trash Messages"
+COM_KUNENA_TRASH_USERMESSAGES="Mesajları Çöpe Gönder"
 COM_KUNENA_UNPUBLISHED="Yayından Kalktı"
 
 ; Removed strings
