--- a/components/com_kunena/admin/language/tr-TR/tr-TR.plg_kunena_community.sys.ini
+++ b/components/com_kunena/admin/language/tr-TR/tr-TR.plg_kunena_community.sys.ini
@@ -14,7 +14,7 @@ PLG_KUNENA_COMMUNITY_DESCRIPTION="JomSocial için Kunena Entegrasyon Eklentisi."
 
 PLG_KUNENA_COMMUNITY_ACCESSTYPE_GROUP="JomSocial Grupları"
 PLG_KUNENA_COMMUNITY_ACCESS_GROUP_TITLE="JomSocial Grup:"
-; PLG_KUNENA_COMMUNITY_ACCESS_GROUP_DESC="The JomSocial Group that is allowed to view this category."
+PLG_KUNENA_COMMUNITY_ACCESS_GROUP_DESC="JomSocial Grubu bu kategoriyi görüntülemek için izinli."
 
 PLG_KUNENA_COMMUNITY_ACCESS="Erişim Kontrolünü Etkinleştir"
 PLG_KUNENA_COMMUNITY_ACCESS_DESC="Seçilen kategoride JomSocial grup üyeleri için Kunena kategori erişimini kısıtlayın. Bu seçeneği kullanmak için 'JomSocial - Kunena Gruplar'  eklentisini yüklemeniz gerekir."
@@ -35,6 +35,6 @@ PLG_KUNENA_COMMUNITY_ACTIVITY_STREAM_LIMIT_DESC="Sınırsız için 0, aksi takti
 
 PLG_KUNENA_COMMUNITY_ACTIVITY_POST_TITLE="Forumda yeni bir '%s' konusu oluşturuldu."
 PLG_KUNENA_COMMUNITY_ACTIVITY_REPLY_TITLE="forumda '%s' konusu yanıtladı."
-; PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE="thanks user '%s' in the forum message '%s'."
+PLG_KUNENA_COMMUNITY_ACTIVITY_THANKYOU_TITLE="'%s' forum mesajındaki '%s' kullanıcısının teşekkürleri"
 
 COM_KUNENA_INTEGRATION_TYPE_JOMSOCIAL="JomSocial"
