--- a/components/com_kunena/site/language/fr-FR/fr-FR.com_kunena.ini
+++ b/components/com_kunena/site/language/fr-FR/fr-FR.com_kunena.ini
@@ -181,7 +181,7 @@ COM_KUNENA_BUTTON_TOPIC_MODERATE="Modérer un sujet"
 COM_KUNENA_BUTTON_TOPIC_MODERATE_LONG="Modérer ce sujet."
 COM_KUNENA_BUTTON_TOPIC_REPLY="Répondre"
 COM_KUNENA_BUTTON_TOPIC_REPLY_LONG="Répondre à ce sujet."
-COM_KUNENA_BUTTON_TOPIC_STICKY="Épinglé"
+COM_KUNENA_BUTTON_TOPIC_STICKY="Épingler"
 COM_KUNENA_BUTTON_TOPIC_STICKY_LONG="Epingler ce sujet."
 COM_KUNENA_BUTTON_TOPIC_SUBSCRIBE="S'abonner"
 COM_KUNENA_BUTTON_TOPIC_SUBSCRIBE_LONG="Abonnez-vous à ce sujet."
