--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.templates.ini
@@ -79,7 +79,7 @@ COM_KUNENA_COLOR_BANNED="Zablokowany"
 COM_KUNENA_COLOR_GLOBAL_MODERATOR="Globalny moderator"
 COM_KUNENA_COLOR_GUEST="Gość"
 COM_KUNENA_COLOR_MODERATOR="Moderator"
-COM_KUNENA_COLOR_USER="Uczestnicy"
+COM_KUNENA_COLOR_USER="Użytkownik"
 COM_KUNENA_COPYRIGHT="Prawa autorskie"
 COM_KUNENA_EDITING_LASTEDIT="Ostatnio zmieniany"
 COM_KUNENA_EDITING_REASON="Powód zmiany"
@@ -178,7 +178,7 @@ COM_KUNENA_MYPROFILE_REGISTERDATE="Data rejestracji"
 COM_KUNENA_MYPROFILE_SEND_MESSAGE="Wyślij wiadomość"
 COM_KUNENA_MYPROFILE_SIGNATURE="Podpis"
 COM_KUNENA_MYPROFILE_SIGNATURE_DESC="Możesz używać emotikon i BBCodes w podpisie"
-COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED="Otrzymane podziękowania"
+COM_KUNENA_MYPROFILE_THANKYOU_RECEIVED="Otrzymane podziękowania:"
 COM_KUNENA_MYPROFILE_TIMEZONE="Strefa czasowa"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME="Nazwa Twojej witryny"
 COM_KUNENA_MYPROFILE_WEBSITE_NAME_DESC="Przykład: Wspaniały Joomla!"
@@ -207,7 +207,7 @@ COM_KUNENA_POST_EMAIL_NEVER="Twój adres email nigdy nie będzie pokazany na tym
 COM_KUNENA_POST_EMAIL_REGISTERED="Twój adres email będzie widoczny tylko dla zarejestrowanych użytkowników."
 COM_KUNENA_POST_NOTIFIED="Zaznacz to pole, jeśli chcesz być informowany o odpowiedziach w tym temacie."
 COM_KUNENA_POST_SUBSCRIBE="Subskrybuj"
-COM_KUNENA_POST_TOPIC_HISTORY_LAST="ostatnich postów - (ostatni post jest pierwszy)"
+COM_KUNENA_POST_TOPIC_HISTORY_LAST="ostatnich postów - <em>(zaczynając od ostatniego)</em>"
 COM_KUNENA_POST_TOPIC_HISTORY_MAX="Maks. pokazywanych"
 COM_KUNENA_PREVIEW="Podgląd"
 COM_KUNENA_PROFILEBOX_CREATE_ACCOUNT="Zarejestruj się"
@@ -302,15 +302,15 @@ COM_KUNENA_TEMPLATE_LEFT="Lewa"
 COM_KUNENA_TEMPLATE_PAGINATION_BORDER_COLOR="Kolor ramki paginacji."
 COM_KUNENA_TEMPLATE_PAGINATION_BORDER_COLOR_DESC="Podaj kolor ramki linku paginacji."
 COM_KUNENA_TEMPLATE_PAGINATION_BORDER_HOVER_COLOR="Kolor ramki paginacji pod kursorem"
-; COM_KUNENA_TEMPLATE_PAGINATION_BORDER_HOVER_COLOR_DESC="Enter the color of pagination link borders when hovered over."
+COM_KUNENA_TEMPLATE_PAGINATION_BORDER_HOVER_COLOR_DESC="Kolor obramowania linku stronicowania wskazywanego kursorem"
 COM_KUNENA_TEMPLATE_PAGINATION_COLOR="Kolor paginacji"
-; COM_KUNENA_TEMPLATE_PAGINATION_COLOR_DESC="Enter the color of pagination links."
+COM_KUNENA_TEMPLATE_PAGINATION_COLOR_DESC="Kolor linku stronicowania"
 COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR="Kolor paginacji pod kursorem"
-; COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR_DESC="Enter the color of pagination links when hovered over."
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR="Pagination Text Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR_DESC="Enter the color of pagination link text."
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR="Pagination Text Hover Color"
-; COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR_DESC="Enter the color of pagination link text when hovered over."
+COM_KUNENA_TEMPLATE_PAGINATION_HOVER_COLOR_DESC="Kolor linku stronicowania wskazywanego kursorem"
+COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR="Kolor tekstu stronicowania"
+COM_KUNENA_TEMPLATE_PAGINATION_TEXT_COLOR_DESC="Kolor linku stronicowania"
+COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR="Kolor tekstu stronicowania wskazywanego kursorem"
+COM_KUNENA_TEMPLATE_PAGINATION_TEXT_HOVER_COLOR_DESC="Kolor linku stronicowania wskazywanego kursorem"
 COM_KUNENA_TEMPLATE_PROFILEPOSITION_DESC="Możesz zmienić położenie awatara użytkownika na stronie wątku. Domyślnie jest to <em>Prawa</em> strona"
 COM_KUNENA_TEMPLATE_PROFILE_ICON_SET="Zestaw ikon profilu"
 COM_KUNENA_TEMPLATE_PROFILE_ICON_SET_DESC="Wybierz zestaw ikon, wyświetlanych na Twoim forum"
@@ -325,10 +325,10 @@ COM_KUNENA_TITLE_MODERATE_TOPIC="Moderuj temat"
 COM_KUNENA_TOPIC="TEMAT:"
 COM_KUNENA_TOPICS="Wątek"
 COM_KUNENA_TOPIC_REPLIES_TITLE="Odpowiedzi w temacie: %s"
-; COM_KUNENA_TOPIC_TAGS="Tags: %s"
+COM_KUNENA_TOPIC_TAGS="Tagi: %s"
 COM_KUNENA_UNAME="Nazwa użytkownika:"
 COM_KUNENA_USERPOSTS="Posts"
-; COM_KUNENA_USER_NO_ATTACHMENTS="No attachments"
+COM_KUNENA_USER_NO_ATTACHMENTS="Brak załaczników"
 COM_KUNENA_USER_PROFILE="Profil dla"
 COM_KUNENA_USER_RETURN_B="kliknij tutaj"
 COM_KUNENA_USRL_EMAIL="E-mail"
@@ -337,10 +337,10 @@ COM_KUNENA_USRL_KARMA="Oklaski"
 COM_KUNENA_USRL_LAST_LOGIN="Ostatnio zalogowani"
 COM_KUNENA_USRL_ONLINE="Status"
 COM_KUNENA_USRL_USERLIST="Użytkownicy"
-; COM_KUNENA_VIEW_COMMON_ANNOUNCE_LIST="View Announcements"
-; COM_KUNENA_VIEW_COMMON_FOOTER_TIME="Time to create page: %01.3f seconds"
+COM_KUNENA_VIEW_COMMON_ANNOUNCE_LIST="Zobacz ogłoszenia"
+COM_KUNENA_VIEW_COMMON_FOOTER_TIME="Czas generowania strony:  %01.3f s."
 COM_KUNENA_VIEW_COMMON_WHO_TITLE="Kto jest on-line"
-; COM_KUNENA_VIEW_COMMON_WHO_TOTAL="Total users online: %s"
+COM_KUNENA_VIEW_COMMON_WHO_TOTAL="Użytkowników on-line: %s"
 COM_KUNENA_VPASS="Powtórz hasło:"
 COM_KUNENA_USER_ATTACHMENT_FILE_WEIGHT="KB"
 COM_KUNENA_ATTACHMENT_MANAGER_TOPIC="Link tematu"
@@ -388,8 +388,8 @@ COM_KUNENA_MYPROFILE_YIM_DESC="Twój pseudonim w Yahoo! Instant Messenger."
 ; JROOT/components/com_kunena/template/mirage/html/
 
 COM_KUNENA_CANCEL_DESC="Kliknij aby anulować"
-; COM_KUNENA_ON_DATE="on %s"
-; COM_KUNENA_TOPICS_MODERATION_PERFORM="Perform"
+COM_KUNENA_ON_DATE="w/na %s"
+COM_KUNENA_TOPICS_MODERATION_PERFORM="Wykonaj"
 COM_KUNENA_TOPIC_IS_LOCKED="Ten temat jest zablokowany"
 COM_KUNENA_TOPIC_STARTED_ON_DATE_BY_USER="Temat rozpoczęty w %s przez %s"
 
@@ -513,39 +513,39 @@ COM_KUNENA_EDITOR_HELPLINE_SAVE="Kliknij tutaj, aby zapisać"
 
 COM_KUNENA_TEMPLATE_COLORS="Kolory"
 COM_KUNENA_TEMPLATE_CSS3_COLORS="Opcje Css3 "
-; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR="Body Color text"
-; COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC="Body Color text. like category details"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN="Hover Category Odd Even Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC="Hover Category Odd Even Color"
-; COM_KUNENA_TEMPLATE_FORUM_LINK_COLOR="Link Color"
-; COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR="Message font color"
-; COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR_DESC="Message color"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND="Backgound Gradient Color top row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC="Backgound Gradient Color top row odd"
-; COM_KUNENA_TEMPLATE_GENERAL_CONFIGURATION="General Configuration"
-; COM_KUNENA_TEMPLATE_HEADER_BACKGROUND="Header color gradient top"
-; COM_KUNENA_TEMPLATE_HEADER_COLOR="Header Color"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND="Header color gradient bottom"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC="Create backbround gradient from Header Color to Header Gradient."
+COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR="Kolor zasadniczego tekstu"
+COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC="Kolor zasadniczego tekstu, takiego jak szczegóły kategorii"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Kolor wskazywanego nieparzystego wiersza kategorii"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC="Kolor wskazywanego nieparzystego wiersza kategorii"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN="Kolor wskazywanego parzystego wiersza kategorii"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC="Kolor wskazywanego parzystego wiersza kategorii"
+COM_KUNENA_TEMPLATE_FORUM_LINK_COLOR="Kolor linku"
+COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR="Kolor czcionki wiadomości"
+COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR_DESC="Kolor wiadomości"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN="Gradient tła - kolor górnego parzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2="Gradient tła - kolor dolnego parzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC="Gradient tła - kolor dolnego parzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC="Gradient tła - kolor górnego parzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND="Gradient tła - kolor górnego nieparzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2="Gradient tła - kolor dolnego nieparzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC="Gradient tła - kolor dolnego nieparzystego wiersza"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC="Gradient tła - kolor górnego nieparzystego wiersza"
+COM_KUNENA_TEMPLATE_GENERAL_CONFIGURATION="Konfiguracja ogólna"
+COM_KUNENA_TEMPLATE_HEADER_BACKGROUND="Nagłówek - kolor gradientu góra"
+COM_KUNENA_TEMPLATE_HEADER_COLOR="Kolor nagłówka"
+COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND="Nagłówek - kolor gradientu dół"
+COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC="Stwórz gradient tła od koloru nagłówka do koloru gradientu"
 COM_KUNENA_TEMPLATE_LEGEND_ADMIN_COLOR="Kolor administratora"
-; COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC="Legend color for Administrators."
+COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC="Kolor legendy dla Administratorów."
 COM_KUNENA_TEMPLATE_LEGEND_COLORS="Legenda"
-; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_COLOR="Global color"
-; COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_DESC="Legend color for Global Moderators."
+COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_COLOR="Kolor globalny"
+COM_KUNENA_TEMPLATE_LEGEND_GLOBAL_DESC="Kolor legendy dla Globalnych Moderatorów."
 COM_KUNENA_TEMPLATE_LEGEND_GUEST_COLOR="Kolor gościa"
-; COM_KUNENA_TEMPLATE_LEGEND_GUEST_DESC="Legend color for Guests."
+COM_KUNENA_TEMPLATE_LEGEND_GUEST_DESC="Kolor legendy dla Gości."
 COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_COLOR="Kolor moderatora"
-; COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC="Legend color for Moderators."
+COM_KUNENA_TEMPLATE_LEGEND_MODERATOR_DESC="Kolor legendy dla Moderatorów."
 COM_KUNENA_TEMPLATE_LEGEND_USER_COLOR="Kolor użytkowników"
-; COM_KUNENA_TEMPLATE_LEGEND_USER_DESC="Legend color for Users."
+COM_KUNENA_TEMPLATE_LEGEND_USER_DESC="Kolor legendy dla Użytkowników."
 COM_KUNENA_TEMPLATE_MIRAGE_TEMPLATE_DESC="To jest nowy szablon przeznaczony dla Kunena 2.0."
 COM_KUNENA_TEMPLATE_TABS="Zakładki"
 
