--- a/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/pl-PL/pl-PL.com_kunena.tpl_blue_eagle.ini
@@ -114,7 +114,7 @@ COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Szablon Blue Eagle jest domyślnym szablon
 COM_KUNENA_TEMPLATE_DISPLAY_MENU="Wyświetl menu forum Kunena"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Wyświetl aktywne menu forum Kunena w szablonie Kunena. Wyłącz tę funkcję, jeśli chcesz korzystać z własnego menu."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Tło nagłówka forum"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Określ kolor tła nagłówka forum"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR="Kolor zakładki podświetlonej"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC="Podaj kolor zakładki menu przy najechaniu myszą"
 COM_KUNENA_TEMPLATE_SKINNER="Wtop się w szablon Joomla"
@@ -122,7 +122,7 @@ COM_KUNENA_TEMPLATE_SKINNER_DESC="Dzięki użytym przeźroczystościom, ta opcja
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR="Kolor przełacznika"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC="Podaj kolor przycisku przełącznika sekcji"
 COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Załaduj responsywny CSS"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Wgraj responsywny CSS by przystosować szablon do wykorzystania w urządzeniach mobilnych. Do poprawnej pracy wymagany jest responsywny szablon Joomli."
 
 ; Removed strings
 
