--- a/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.templates.ini
+++ b/components/com_kunena/site/language/pt-PT/pt-PT.com_kunena.templates.ini
@@ -515,26 +515,26 @@ COM_KUNENA_TEMPLATE_COLORS="Cores"
 COM_KUNENA_TEMPLATE_CSS3_COLORS="Opções Css3"
 COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR=" Cor do Corpo do Texto "
 COM_KUNENA_TEMPLATE_FORUM_BODY_COLOR_DESC="Cor do corpo do texto. Como detalhes da categoria"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC="Hover Category Odd Row Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN="Hover Category Odd Even Color"
-; COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC="Hover Category Odd Even Color"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW="Cor para categoria ao aproximar cursor, para linha ímpar"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_DESC="Cor para categoria ao aproximar cursor, para linha ímpar"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN="Cor para categoria ao aproximar cursor, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_HOVER_CATEGORIES_ROW_EVEN_DESC="Cor para categoria ao aproximar cursor, para linha par"
 COM_KUNENA_TEMPLATE_FORUM_LINK_COLOR="Cor do link"
 COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR="Cor da fonte da mensagem"
 COM_KUNENA_TEMPLATE_FORUM_MSG_COLOR_DESC="Cor da mensagem"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC="Backgound Gradient Color Bottom row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC="Backgound Gradient Color top row even"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND="Backgound Gradient Color top row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC="Backgound Gradient Color bottom row odd"
-; COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC="Backgound Gradient Color top row odd"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN="Cor do topo do gradiente de fundo, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2="Cor de baixo do gradiente de fundo, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN2_DESC="Cor de baixo do gradiente de fundo, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_ROW_EVEN_DESC="Cor do topo do gradiente de fundo, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND="Cor do topo do gradiente de fundo, para linha ímpar"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2="Cor de baixo do gradiente de fundo, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND2_DESC="Cor de baixo do gradiente de fundo, para linha par"
+COM_KUNENA_TEMPLATE_FORUM_ROW_ODD_BACKGROUND_DESC="Cor do topo do gradiente de fundo, para linha par"
 COM_KUNENA_TEMPLATE_GENERAL_CONFIGURATION="Configuração Geral"
-; COM_KUNENA_TEMPLATE_HEADER_BACKGROUND="Header color gradient top"
+COM_KUNENA_TEMPLATE_HEADER_BACKGROUND="Cor do topo do gradiente do cabeçalho"
 COM_KUNENA_TEMPLATE_HEADER_COLOR="Cor de cabeçalho"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND="Header color gradient bottom"
-; COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC="Create backbround gradient from Header Color to Header Gradient."
+COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND="Cor do fundo do gradiente do cabeçalho"
+COM_KUNENA_TEMPLATE_HEADER_GRADIENT_BACKGROUND_COLOR_DESC="Criar gradiente de fundo desde cor do cabeçalho para gradiente do cabeçalho."
 COM_KUNENA_TEMPLATE_LEGEND_ADMIN_COLOR="Cor Administrador"
 COM_KUNENA_TEMPLATE_LEGEND_ADMIN_DESC="Cor da legenda para Administradores."
 COM_KUNENA_TEMPLATE_LEGEND_COLORS="Legenda"
