--- a/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.ini
+++ b/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.ini
@@ -24,7 +24,7 @@ COM_KUNENA_A_ACCESSTYPE_TITLE="Тип контролю доступу:"
 COM_KUNENA_A_CATEGORY_ALIAS="Псевдонім"
 COM_KUNENA_A_DISPLAY="К-ть рядків"
 COM_KUNENA_A_POLL_CATEGORIES_ALLOWED="Дозволити опитування"
-COM_KUNENA_A_POLL_CATEGORIES_ALLOWED_DESC="Установіть <em>Так</em>, якщо хочете дозволити опитування в цій категорії.\n"
+COM_KUNENA_A_POLL_CATEGORIES_ALLOWED_DESC="Установіть <em>Так</em>, якщо хочете дозволити опитування в цій категорії."
 COM_KUNENA_BASICSFORUMINFO="Назва та опис категорії"
 COM_KUNENA_BY="від"
 COM_KUNENA_CANCEL="Відмінити"
@@ -32,7 +32,7 @@ COM_KUNENA_CATEGORY="Категорія"
 COM_KUNENA_CATEGORY_ANONYMOUS="Анонімність"
 COM_KUNENA_CATEGORY_ANONYMOUS_ALLOW="Дозволити анонімні повідомлення"
 COM_KUNENA_CATEGORY_ANONYMOUS_ALLOW_DESC="Анонімні повідомлення можуть використовувати зареєстровані користувачі для розміщення інформації конфіденційно для категорії: <b>Без інформації про користувача</b>, де будуть зберігатися повідомлення як анонімні (включаючи IP адреси)."
-COM_KUNENA_CATEGORY_ANONYMOUS_DEFAULT="Типова відповідь на повідомлення\n"
+COM_KUNENA_CATEGORY_ANONYMOUS_DEFAULT="Типова відповідь на повідомлення"
 COM_KUNENA_CATEGORY_ANONYMOUS_DEFAULT_DESC="Якщо анонімні повідомлення дозволені, цей параметр вибирається користувачами як типова відповідь. Звичайні користувачі в подальшому можуть редаґувати свої власні повідомлення залишаючись анонімними, й лише модератори мають можливість редаґувати анонімні повідомлення."
 COM_KUNENA_CATEGORY_CHANNELS="Канали категорії"
 COM_KUNENA_CATEGORY_CHANNELS_DESC="<em>Канали категорії</em> дозволяють змінювати, які теми будуть бачити люди, входячи в категорію. Функція дозволяє створити <strong>Псевдоніми категорій</strong>, <strong>Оголошення мультикатегорій</strong> та <strong>Колекциї категорій</strong>."
@@ -123,7 +123,7 @@ COM_KUNENA_USRL_POSTS="Дописів"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="Перегляд категорії '%s'"
 COM_KUNENA_YES="Так"
 COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="Розширення дозволяє завантажити аватар: %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="Ви не можете бачити статистику"
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
