--- a/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/ar-AA/ar-AA.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="تحديد قائمة من الاقس
 COM_KUNENA_A_RSS_LIMIT="  حد ال RSS"
 COM_KUNENA_A_RSS_LIMIT_DESC="يمكنك أيضا تحديد عدد من العناصر في تغذية ال RSS . استخدام هذا ، إذا كان وقت المحدد المسموح به لا يكفي. يمكن ان استخدام مع, أو بدون, وقت محدد. <br />Use 0  أو تركه فارغا وقت محدد."
 COM_KUNENA_A_RSS_OLD_TITLES="استخدام عناوين النمط القديم"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>لا</u> - ستبقي العناوين سليمه : \'#post title#\'<br/><u>Yes</u> - Titles will look like this: \'Subject: #post title# - By: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>لا</u> - ستبقي العناوين سليمه : \\'#post title#\\'<br/><u>Yes</u> - Titles will look like this: \\'Subject: #post title# - By: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="وصف ال RSS"
 COM_KUNENA_A_RSS_SPEC_DESC="تحديد شكل مخصص لجميع ال rss."
 COM_KUNENA_A_RSS_TIMELIMIT="سجل ال RSS (تحديد الوقت)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="تتبع عنوان IP"
 COM_KUNENA_A_IP_TRACKING_DESC="If set to <em>Yes</em>, forum will record IP address for every posted message (excluding anonymous posting feature). While the feature can be very useful when fighting against spam and malicious users, storing IP address without making users to accept it in the terms may be illegal in some countries."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="يسمح للضيوف لرؤية رابط الإحصائيات"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="اختر ‘نعم السماح للضيوف لرؤية رابط الإحصائيات."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
