--- a/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/el-GR/el-GR.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Ορίστε μια λίστα κατ
 COM_KUNENA_A_RSS_LIMIT="Όριο RSS"
 COM_KUNENA_A_RSS_LIMIT_DESC="Μπορείτε επίσης να περιορίσετε τον αριθμό των αντικειμένων στις τροφοδοσίες RSS. Μπορεί να χρησιμοποιηθεί με ή χωρίς προθεσμία. <br />Ορίστε τιμή 0 ή αφήστε το πεδίο κενό για να μην υπάρχει όριο."
 COM_KUNENA_A_RSS_OLD_TITLES="Χρησιμοποίηση Τίτλων Παλαιού Στυλ"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Όχι</u> - Οι τίτλοι θα διατηρηθούν ανέπαφοι και θα μοιάζουν ως ακολούθως: \'#post title#\'<br /><u>Ναι</u> - Οι τίτλοι θα μοιάζουν ως ακολούθως: \'Subject: #post title# - By: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Όχι</u> - Οι τίτλοι θα διατηρηθούν ανέπαφοι και θα μοιάζουν ως ακολούθως: \\'#post title#\\'<br /><u>Ναι</u> - Οι τίτλοι θα μοιάζουν ως ακολούθως: \\'Subject: #post title# - By: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="Προδιαγραφή RSS"
 COM_KUNENA_A_RSS_SPEC_DESC="Ορίστε μια προσαρμοσμένη μορφή για όλες τις RSS τροφοδοσίες."
 COM_KUNENA_A_RSS_TIMELIMIT="Ιστορικό RSS (προθεσμία)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="Παρακολούθηση Διεύθυνσης IP"
 COM_KUNENA_A_IP_TRACKING_DESC="Αν επιλεγεί <em>Ναι</em>, το φόρουμ θα καταγράφει τις διευθύνσεις IP για κάθε δημοσιευμένο μήνυμα (εξαιρουμένης της λειτουργίας ανώνυμης δημοσίευσης). Παρόλο που αυτό το χαρακτηριστικό μπορεί να αποβεί πολύ χρήσιμο στην καταπολέμηση των ανεπιθύμητων μηνυμάτων και των κακόβουλων χρηστών, η αποθήκευση της διεύθυνσης IP των χρηστών χωρίς τη ρητή τους συγκατάθεση μπορεί να είναι παράνομη σε κάποιες χώρες."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
