--- a/components/com_kunena/admin/language/eo-XX/eo-XX.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/eo-XX/eo-XX.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Difini liston de kategorioj (perkome 
 COM_KUNENA_A_RSS_LIMIT="RSS-limo"
 COM_KUNENA_A_RSS_LIMIT_DESC="Vi ankaŭ povas limigi la nombron da elementoj en viaj RSS-fluoj. Uzu tion se tempolimo ne taŭgas. Povas esti uzata kune kun aŭ sen tempolimo. <br />Uzi 0 aŭ lasu malplena por neniu limo."
 COM_KUNENA_A_RSS_OLD_TITLES="Uzi Malnovstilaj titoloj"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ne</u> - Titoloj estas netuŝitaj, kun tia aspekto: \'#post title#\'<br /><u>Jes</u> - Titoloj aspektas jene: \'Rubriko: #post title# - De: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ne</u> - Titoloj estas netuŝitaj, kun tia aspekto: \\'#post title#\\'<br /><u>Jes</u> - Titoloj aspektas jene: \\'Rubriko: #post title# - De: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS-difino"
 COM_KUNENA_A_RSS_SPEC_DESC="Specifi propran formaton por ĉiuj rss-fluoj."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS-historio (tempolimo)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP adresospuradon"
 COM_KUNENA_A_IP_TRACKING_DESC="Se <em>Jes</em> la forumo registros la IP-adreson por ĉiu sendita mesaĝo (krom por anonimaj noticoj). Dum la trajto povas esti tre utila en la lukto kontraŭ spamado kaj malicaj uzantoj, stokante IP sen igi uzantojn akcepti ĝin en la kondiĉoj povas esti kontraŭleĝa en kelkaj landoj."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
