--- a/components/com_kunena/admin/language/hr-HR/hr-HR.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/hr-HR/hr-HR.com_kunena.views.ini
@@ -458,6 +458,8 @@ COM_KUNENA_VERSION_CHECK_DESC="Postavi na <em>Da</em> ako želite da Kunena prov
 ; COM_KUNENA_A_IP_TRACKING_DESC="If set to <em>Yes</em>, forum will record IP address for every posted message (excluding anonymous posting feature). While the feature can be very useful when fighting against spam and malicious users, storing IP address without making users to accept it in the terms may be illegal in some countries."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
