--- a/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/lt-LT/lt-LT.com_kunena.views.ini
@@ -287,7 +287,7 @@ COM_KUNENA_A_RSS_INCLUDED_CATEGORIES_DESC="Nurodyti kategorijų sąrašą (atski
 COM_KUNENA_A_RSS_LIMIT="RSS limitas"
 COM_KUNENA_A_RSS_LIMIT_DESC="Taip pat galite riboti pozicijų skaičių savo RSS naujienose. Naudokite tai, jeigu termino nepakanka. Gali būti naudojamas su, arba be, termino.<br />Naudokite 0 arba palikite tuščiu, kad nebūtų limito."
 COM_KUNENA_A_RSS_OLD_TITLES="Naudoti seno stiliaus pavadinimus"
-COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ne</u> - Pavadinimai bus nepaliesti, atrodys taip: \'#post title#\'<br /><u>Taip</u> - Pavadinimai atrodys taip: \'Tema: #post title# - Nuo: #author#\'"
+COM_KUNENA_A_RSS_OLD_TITLES_DESC="<u>Ne</u> - Pavadinimai bus nepaliesti, atrodys taip: \\'#post title#\\'<br /><u>Taip</u> - Pavadinimai atrodys taip: \\'Tema: #post title# - Nuo: #author#\\'"
 COM_KUNENA_A_RSS_SPEC="RSS specifikacija"
 COM_KUNENA_A_RSS_SPEC_DESC="Nurodykite pasirinktinį formatą visiems RSS."
 COM_KUNENA_A_RSS_TIMELIMIT="RSS istorija (terminas)"
@@ -458,6 +458,8 @@ COM_KUNENA_A_IP_TRACKING="IP adreso sekimas"
 COM_KUNENA_A_IP_TRACKING_DESC="Jei nustatyta <em>taip</em>, forumas išsaugos kiekvieno pranešimo IP adresą (išskyrus anoniminio registravimo funkciją). Nors ši funkcija gali būti labai naudinga kovojant su šlamštu ir nariais, platinančiais kenkėjiškas programas, tačiau kai kuriuose šalyse IP adreso išsaugojimas be narių sutikimo yra nelegalus veiksmas."
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Allow Guests to see Stats link"
 ; COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Set to Yes to allow Guests to see Stats link."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
