--- a/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.sys.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.sys.ini
@@ -17,7 +17,7 @@ COM_KUNENA_DASHBOARD="Pulpit"
 COM_KUNENA_EMOTICON_MANAGER="Emotikony"
 COM_KUNENA_FILE_MANAGER="Menadżer plików"
 COM_KUNENA_FORUM_TOOLS="Narzędzia Forum"
-; COM_KUNENA_PLUGIN_MANAGER="Plug-in Manager"
+COM_KUNENA_PLUGIN_MANAGER="Menadżer wtyczek"
 COM_KUNENA_RANK_MANAGER="Rangi"
 COM_KUNENA_TEMPLATE_MANAGER="Szablony"
 COM_KUNENA_TRASH_MANAGER="Kosz"
@@ -280,8 +280,8 @@ COM_KUNENA_POSTS_MODE_OPTION_UNAPROVED="Niezatwierdzone posty"
 ; JROOT/components/com_kunena/views/topics/tmpl/user.xml
 
 COM_KUNENA_MENU_TOPICS_MYRECENT="Moje tematy"
-; COM_KUNENA_MENU_TOPICS_MYRECENT_DESC="Displays user posts with a few options to choose from."
-; COM_KUNENA_MENU_TOPICS_MYRECENT_DESC_LONG="Displays user posts with a few options to choose from."
+COM_KUNENA_MENU_TOPICS_MYRECENT_DESC="Wyświetl posty użytkownika z kilkoma opcjami do wyboru"
+COM_KUNENA_MENU_TOPICS_MYRECENT_DESC_LONG="Wyświetl posty użytkownika z kilkoma opcjami do wyboru"
 COM_KUNENA_MENU_TOPICS_MYRECENT_LONG="Forum Kunena: Moje Tematy"
 COM_KUNENA_TOPICS_MODE_OPTION_MYFAVORITES="Moje ulubione"
 COM_KUNENA_TOPICS_MODE_OPTION_MYLATEST="Moje ostatnie tematy"
@@ -289,11 +289,11 @@ COM_KUNENA_TOPICS_MODE_OPTION_MYSUBSCRIPTIONS="Moje subskrypcje"
 COM_KUNENA_TOPICS_MODE_OPTION_POSTED="Zamieszczonych przeze mnie"
 COM_KUNENA_TOPICS_MODE_OPTION_STARTED="Rozpoczętych przeze mnie"
 COM_KUNENA_TOPICS_MODE_OPTION_PLUGIN="Przez Plugin"
-; COM_KUNENA_TOPICS_MODETYPE_DESC="Header Text (By Plugin only)"
+COM_KUNENA_TOPICS_MODETYPE_DESC="Tekst nagłówka (tylko dla wtyczki)"
 
 ; JROOT/components/com_kunena/views/user/metadata.xml
 
-; COM_KUNENA_MENU_USER_DESC="This view shows user related layouts."
+COM_KUNENA_MENU_USER_DESC="Ten widok pokazuje powiązane z użytkownikiem układy"
 
 ; JROOT/components/com_kunena/views/user/tmpl/default.xml
 
