--- a/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.views.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.com_kunena.views.ini
@@ -23,7 +23,7 @@ COM_KUNENA_EMOTICONS_CODE="Kod"
 COM_KUNENA_EMOTICONS_EMOTICON_MANAGER="Emotikony"
 COM_KUNENA_GEN_DELETE="Usuń"
 COM_KUNENA_RANKS="Nazwa rangi"
-; COM_KUNENA_REPORT_SYSTEM="Report Configuration"
+COM_KUNENA_REPORT_SYSTEM="Zestawienie konfiguracji"
 COM_KUNENA_STATS_GEN_STATS="Statystyki główne"
 COM_KUNENA_TRASH_AUTHOR_USERID="Id użytkownika"
 COM_KUNENA_TRASH_IP="IP"
@@ -40,7 +40,7 @@ COM_KUNENA_FIELD_LABEL_DESCENDING="Malejąco"
 COM_KUNENA_FIELD_LABEL_SEARCH_IN="Szukaj w"
 COM_KUNENA_FIELD_LABEL_ALL="Wszystkie"
 COM_KUNENA_FIELD_LABEL_FILTER="Filtr"
-; COM_KUNENA_FIELD_LABEL_FILTERCLEAR="Clear Active Filter"
+COM_KUNENA_FIELD_LABEL_FILTERCLEAR="Wyczyść aktywny filtr"
 COM_KUNENA_SORT_TABLE_BY="Sortuj tabelę wg"
 COM_KUNENA_TABLEHEAD_TITLE="Tytuł"
 COM_KUNENA_TABLEHEAD_OPTION="Opcja"
@@ -134,8 +134,8 @@ COM_KUNENA_A_AUTOEMBEDEBAY="Automatycznie wstaw pozycję eBay"
 COM_KUNENA_A_AUTOEMBEDEBAY_DESC="Ustaw Tak jeśli chcesz wyszukać pozycję eBay i automatycznie wstawić."
 COM_KUNENA_A_AUTOEMBEDYOUTUBE="Automatycznie wstaw video YouTube"
 COM_KUNENA_A_AUTOEMBEDYOUTUBE_DESC="Ustaw Tak jeśli chcesz automatycznie wstawić URL do wideo YouTube."
-; COM_KUNENA_A_AUTOLINK="Auto-Link URLs"
-; COM_KUNENA_A_AUTOLINK_DESC="Set to <em>Yes</em> if you want to enable automatic URL detection. Enabling this feature may break Joomla content plug-ins which are trying to parse URLs from the content."
+COM_KUNENA_A_AUTOLINK="Twórz automatycznie linki z adresów URL"
+COM_KUNENA_A_AUTOLINK_DESC="Wybierz <em>Tak</em> jeśli chcesz włączyć auto-wykrywanie URLi. Włączenie może kolidować z wtyczkami Joomli, które próbują analizować URLe w tekście."
 COM_KUNENA_A_AVATARGALLERY="Galeria awatarów"
 COM_KUNENA_A_AVATARGALLERY_DESC="Wybierz Tak, aby umożliwić użytkownikom wybieranie awatarów z Twojej galerii.(ścieżka dostępu: components/com_kunena/avatars/gallery)."
 COM_KUNENA_A_AVATARUPLOAD="Zgoda na przesyłanie"
@@ -240,7 +240,7 @@ COM_KUNENA_A_MESSAGES_DESC="Ustal ilość wiadomości, które będą wyświetlan
 COM_KUNENA_A_MESSAGES_DESC_SEARCH="Określ, ile wiadomości wyświetlać w wynikach wyszukiwania."
 COM_KUNENA_A_MESSAGES_SEARCH="Wyniki wyszukania"
 COM_KUNENA_A_MAILMOD="E-mail do moderatorów"
-; COM_KUNENA_A_MAILMOD_DESC="Set to <em>Unapproved Posts</em> or <em>All New Posts</em> if you want e-mail notifications on new posts sent to the category moderators. Note: Global moderators and administrators do not get e-mail notifications with this option unless you explicitly assign them as moderators on the category."
+COM_KUNENA_A_MAILMOD_DESC="Ustaw jako <em>Niezatwierdzone posty</em> lub <em>Wszystkie Nowe Posty</em> jeżeli chcesz wysyłać powiadomienia e-mail o nowych postach do Moderatorów danej kategorii. Uwaga: Globalni Moderatorzy ani Administratorzy nie będą otrzymywać tych maili, chyba, że zostaną wprost przypisani jako Moderatorzy do danej kategorii."
 COM_KUNENA_A_PESONNALTEXT="Maksymalna długość tekstu osobistego"
 COM_KUNENA_A_PESONNALTEXT_DESC="Maksymalna ilość znaków dozwolona dla tekstu osobistego w profilu."
 COM_KUNENA_A_POLL_ALLOW_ONE_VOTE="Tylko jeden głos"
@@ -294,10 +294,10 @@ COM_KUNENA_A_RSS_TIMELIMIT="Historia RSS (limit czasu)"
 COM_KUNENA_A_RSS_TIMELIMIT_DESC="Wybierz jak wiele historii powinno być włączone w globalnym kanale RSS. Domyślnie 1 miesiąc, ale zalecane jest ograniczyć ten okres do 1 tygodnia dla dużych serwisów."
 COM_KUNENA_A_RSS_TYPE="Domyślny styl RSS"
 COM_KUNENA_A_RSS_TYPE_DESC="Wybierz typ kanału RSS pomiędzy: _Najnowsze wątki_ - lista wyłącznie wątków, nie postów. W kolejności od najnowszych. _Najnowsze posty_ - lista tylko postów, nie wątków. Również od najnowszych. _Ostatnia aktywność_ - lista zawierająca najnowsze odpowiedzi (w tym posty) jako pierwsze ."
-; COM_KUNENA_CONFIG_RSS_CHARACTERS_COUNT="Limit Number of Characters Per Item"
-; COM_KUNENA_CONFIG_RSS_CHARACTERS_COUNT_DESC="How many characters shall each post in feed contain?<br />Note: This feature may cut off BBCode. Most feed readers can handle this."
-; COM_KUNENA_A_RSS_FEEDBURNER_URL="The URL of the basic RSS feed into FeedBurner."
-; COM_KUNENA_A_RSS_FEEDBURNER_URL_DESC="If you use FeedBurner to serve your RSS, enter here the full URL of your RSS in FeedBurner. http://feeds.feedburner.com/yourfeed . Please note that you will need to setup the feed in feedburner to point to your feed in this site.<br />Leave empty if you dont use FeedBurner."
+COM_KUNENA_CONFIG_RSS_CHARACTERS_COUNT="limit ilości znaków dla wiadomnkości"
+COM_KUNENA_CONFIG_RSS_CHARACTERS_COUNT_DESC="Ile znaków ma zawierać post w strumieniu? Uwaga: Ta opcja może obciąć część BBcode. Większość czytników RSS powinna sobie z tym poradzić."
+COM_KUNENA_A_RSS_FEEDBURNER_URL="URL podstawowego strumienia RSS dla FeedBurnera."
+COM_KUNENA_A_RSS_FEEDBURNER_URL_DESC="Jeśli używasz FeedBurnera do obsługi RSS, wpisz pełen URL do twojego strumienia w FeedBurnerze. http://feeds.feedburner.com/yourfeed . Będziesz musiał wstawić strumień w FeedBurnerze tak, aby wskazywał strumień tej witryny.<br />Zostaw puste, jeśli nie używasz FeedBurnera."
 COM_KUNENA_A_SECURITY="Bezpieczeństwo"
 COM_KUNENA_A_SECURITY_SETTINGS="Ochrona forum"
 COM_KUNENA_A_SEND_EMAILS="Wysyłaj e-maile do użytkowników"
@@ -361,8 +361,8 @@ COM_KUNENA_A_USER_RELATED="Dotyczące użytkowników"
 COM_KUNENA_CACHING_SETTINGS="Ustawienia pamięci podręcznej"
 COM_KUNENA_CATIMAGEPATH="Ścieżka obrazka kategorii"
 COM_KUNENA_CATIMAGEPATH_DESC="Ścieżka obrazka kategorii. Jeżeli ustawiłeś category_images/ ścieżką będzie components/com_fireboard/category_images/"
-; COM_KUNENA_CFG_ACCESS_COMPONENT="Direct Component Access"
-; COM_KUNENA_CFG_ACCESS_COMPONENT_DESC="Set <em>Yes</em> to allow direct access to <b>%s</b> URLs. It is adviced to turn off this setting, but only after proper testing. Disabling this feature improves SEO and brings some protection against spam bots. <b>Warning:</b> If you see <em>404 %s</em> errors after setting this option to <em>No</em>, please check that you have correctly set up the Kunena menu."
+COM_KUNENA_CFG_ACCESS_COMPONENT="Bezpośredni dostęp do komponentu"
+COM_KUNENA_CFG_ACCESS_COMPONENT_DESC="Wybierz <em>Tak</em> by zezwolić na bezpośredni dostęp do URLa <b>%s</b>.  Zalecane jest wyłączenie tego ustawienia, ale dopiero po pełnych testach. Wyłączenie poprawia SEO i zwiększa poziom ochrony przed spambotami. <b>UWAGA:</b> Jeśli otrzymujesz błedy <em>404 %s</em> po ustawieniu na <em>Nie</em>, sprawdź, czy prawidłowo skonfigurowałeś menu Kunena."
 COM_KUNENA_CFG_CACHE="Cache'owanie"
 COM_KUNENA_CFG_CACHE_DESC="Wybierz, czy Kunena ma używać pamięci podręcznej."
 COM_KUNENA_CFG_CACHE_TIME="Czas Cache'u"
@@ -370,7 +370,7 @@ COM_KUNENA_CFG_CACHE_TIME_DESC="Czas przed wyjściem jest wyczyszczony. Ta opcja
 COM_KUNENA_CFG_DEFAULT_SORT="Kolejność wiadomości"
 COM_KUNENA_CFG_DEFAULT_SORT_DESC="Wybierz domyślny komunikat zamawiania podczas przeglądania tematu. To ustawienie może być zmienione przez użytkownika."
 COM_KUNENA_CFG_FALLBACK_ENGLISH="Używaj angielskiego gdy brak tłumaczeń"
-; COM_KUNENA_CFG_FALLBACK_ENGLISH_DESC="Use English language if translation is missing. If set to <em>No</em> or debug mode has been turned on, translation keys (COM_KUNENA_LANGUAGE_KEY) are shown instead."
+COM_KUNENA_CFG_FALLBACK_ENGLISH_DESC="Użyj języka Angielskiego, jeżeli tłumaczenie jest niekompletne. Jeżeli ustawiono na <em>Nie</em> albo tryb debugowania został włączony, zostaną wyświetlone przyciski tłumaczenia (COM_KUNENA_LANGUAGE_KEY) "
 COM_KUNENA_CFG_POST_DATEFORMAT="Format czasu wiadomości"
 COM_KUNENA_CFG_POST_DATEFORMAT_DESC="Wybierz format czasu dla wiadomości wyświetlany w forum."
 COM_KUNENA_CFG_POST_DATEFORMAT_HOVER="Format czasu wiadomości w podpowiedzi"
@@ -382,7 +382,7 @@ COM_KUNENA_COM_A_BBCODE_IMG_SECURE_DESC="Ta opcja zmienia sposób, w jaki znaczn
 COM_KUNENA_COM_A_ENABLELIGHTBOX="Włącz lightbox dla obrazów"
 COM_KUNENA_COM_A_ENABLELIGHTBOX_DESC="Włącz lightbox dla obrazów wyświetlanych na forum"
 COM_KUNENA_COM_A_ENABLE_THREADED_LAYOUTS="Zezwalaj na inny układ postów"
-; COM_KUNENA_COM_A_ENABLE_THREADED_LAYOUTS_DESC="Allow users to change topic layout between flat, threaded and indented."
+COM_KUNENA_COM_A_ENABLE_THREADED_LAYOUTS_DESC="Zezwól użytkownikom na zmienianie układu tematów między liniowym, wątkowym i wcinanym."
 COM_KUNENA_COM_A_HIDE_IP="Ukryj IP w postach moderatorów."
 COM_KUNENA_COM_A_HIDE_IP_DESC="Ukryj IP w postach moderatorów i pokazuj tylko moderatorom."
 COM_KUNENA_COM_A_MOD_SEE_DELETED="Pokaż usunięte wiadomości"
@@ -398,7 +398,7 @@ COM_KUNENA_COM_A_SHOW_TOPICS_FROM_LAST_TIME_DESC="Pokaż tematy od określonego 
 COM_KUNENA_COM_A_TOPCIICONS_DESC="Jeśli jest ustawiony na Tak, użytkownik może wybrać własną ikonę tematu. W innym przypadku ikony pokazują status tematu (normalny, przyklejony, zamknięty itp.)."
 COM_KUNENA_COM_A_TOPICICONS="Wybieralne ikony tematu"
 COM_KUNENA_COM_A_TOPIC_LAYOUT="Domyślny układ postow"
-; COM_KUNENA_COM_A_TOPIC_LAYOUT_DESC="Select which topic layout that will be the default for all users (until they select one themselves)"
+COM_KUNENA_COM_A_TOPIC_LAYOUT_DESC="Wybierz jaki wygląd tematu zostanie wyświetlony jako domyślny dla wszystkich użytkowników ( do momentu aż sami wybiorą jeden)"
 COM_KUNENA_COM_A_USER_SESSIONS_START_TIME="Pokaż aktywnych użytkowników od tego czasu"
 COM_KUNENA_COM_A_USER_SESSIONS_TYPE="Pokaż aktywnych użytkowników z konkretnym ustawieniem"
 COM_KUNENA_COM_A_WAY_COUNT_USERS_USERLIST="Licznik użytkowników zawiera"
@@ -455,14 +455,16 @@ COM_KUNENA_USERSTATSDESC="Tak, aby wyświetlać statystykę: Autorzy - najpopula
 COM_KUNENA_VERSION_CHECK="Włącz sprawdzanie wersji"
 COM_KUNENA_VERSION_CHECK_DESC="Ustaw Tak, jeśli chcesz sprawdzać czy są nowe wersje Kunena są dostępne."
 COM_KUNENA_A_IP_TRACKING="Śledzenie Adresu IP"
-; COM_KUNENA_A_IP_TRACKING_DESC="If set to <em>Yes</em>, forum will record IP address for every posted message (excluding anonymous posting feature). While the feature can be very useful when fighting against spam and malicious users, storing IP address without making users to accept it in the terms may be illegal in some countries."
+COM_KUNENA_A_IP_TRACKING_DESC="Jeśli ustawisz na <em>Tak</em>, forum będzie zapisywać adresy IP każdego zamieszczonego posta (z wyłączeniem wysyłki anonimowej). Co prawda może to być bardzo pomocne w walce ze spamem i oszustami sieciowymi, ale przechowywanie adresów IP bez uzyskania zgody użytkowników może być w pewnych krajach nielegalne."
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED="Pozwól gościom widzieć link do Statystyk"
 COM_KUNENA_ADMIN_CONFIG_STATSLINK_ALLOWED_DESC="Ustaw Tak aby wyświetlać gościom link do Statystyk."
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST="Show Super Users in user list"
+; COM_KUNENA_A_SHOW_SUPERADMINS_IN_USERLIST_DESC="Should the Super Users be shown in the user list?"
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
 COM_KUNENA_CONFIG_MODAL_TITLE="Domyślne"
-; COM_KUNENA_CONFIG_MODAL_DESCRIPTION="This will reset your Kunena configuration to the default settings that were distributed with the component. Old settings will be removed during this process and cannot be restored. Are you sure you like to proceed?"
+COM_KUNENA_CONFIG_MODAL_DESCRIPTION="Konfiguracja Kekuny zostanie przywrócona do domyślnych ustawień z dystrybucji komponentu. Aktualne ustawienia zostaną usunięte i nie będzie możliwe cofnięcie tego kroku. Czy chcesz kontynuować?"
 COM_KUNENA_CONFIG_MODAL_VALIDATE="Weryfikuj"
 COM_KUNENA_CONFIG_MODAL_CANCEL="Anuluj"
 
@@ -573,7 +575,7 @@ COM_KUNENA_TEMPLATES_NEW_TEMPLATE="Nowy szablon"
 COM_KUNENA_A_TEMPLATE_MANAGER_AUTHOR="Autor"
 COM_KUNENA_A_TEMPLATE_MANAGER_PARAMSUNWRITABLE="Niezapisywalny"
 COM_KUNENA_A_TEMPLATE_MANAGER_PARAMSWRITABLE="Zapisywalny"
-; COM_KUNENA_A_TEMPLATE_MANAGER_CSS_FILE_PERMISSION="Permissions Of CSS Files"
+COM_KUNENA_A_TEMPLATE_MANAGER_CSS_FILE_PERMISSION="Pozwolenia plików CSS"
 
 ; JROOT/administrator/components/com_kunena/views/templates/tmpl/add.php
 
@@ -654,19 +656,19 @@ COM_KUNENA_PRUNE_DELETEORTRASH="Wybierz jeżeli chcesz skasować wiadomości lub
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/purgerestatements.php
 
-; COM_KUNENA_A_PURGE_ENTER_RE_STATEMENTS="Select RE: prefix which you want to remove from every reply:"
+COM_KUNENA_A_PURGE_ENTER_RE_STATEMENTS="Zaznacz przedrostek RE:, który chcesz usunąć z każdej odpowiedzi"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/recount.php
 
 COM_KUNENA_A_RECOUNT_CATEGORIES="Przelicz statystyki kategorii"
-; COM_KUNENA_A_RECOUNT_CATEGORIES_DESC="Update total topics and posts for every category. Fix last topic information."
+COM_KUNENA_A_RECOUNT_CATEGORIES_DESC="Uaktualnij wszystkie tematy i posty z każdej kategorii. Naprawi ostatnie informacje tematu"
 COM_KUNENA_A_RECOUNT_OPTIONS="Opcje"
 COM_KUNENA_A_RECOUNT_TOPICS="Przelicz statystyki postów"
-; COM_KUNENA_A_RECOUNT_TOPICS_DESC="Update post count for every topic. Fix first and last post information."
+COM_KUNENA_A_RECOUNT_TOPICS_DESC="Uaktualnij zliczanie postów dla każdego tematu. Naprawi Pierwszą i ostatnią informację  posta"
 COM_KUNENA_A_RECOUNT_USERS="Przelicz statystyki użytkownika"
 COM_KUNENA_A_RECOUNT_USERS_DESC="Zaktualizuj całkowitą liczbę postów dla każdego użytkownika."
 COM_KUNENA_A_RECOUNT_USERTOPICS="Przelicz statystyki dla Użytkowników"
-; COM_KUNENA_A_RECOUNT_USERTOPICS_DESC="Update user post count for every topic. Fix last posted information."
+COM_KUNENA_A_RECOUNT_USERTOPICS_DESC="Uaktualnij zliczanie postów użytkownika dla każdego tematu. Naprawi ostatnią zamieszczoną informacje"
 
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/syncusers.php
 
@@ -690,7 +692,7 @@ COM_KUNENA_TOOLS_LABEL_CLEANUP_IP="Wyczyść adresy IP"
 ; JROOT/administrator/components/com_kunena/views/tools/tmpl/cleanupip.php
 
 COM_KUNENA_LEGEND_CLEANUP_IP="Usuń przechowywane adresy IP"
-; COM_KUNENA_CLEANUP_IP_LEGEND_FROMDAYS="Remove all stored IP addresses from the messages older than"
+COM_KUNENA_CLEANUP_IP_LEGEND_FROMDAYS="Usuń wszystkie przechowywane adresy IP z wiadomości starszych niż"
 COM_KUNENA_CLEANUP_IP_LEGEND_DAYS="dni"
 
 ; JROOT/administrator/components/com_kunena/views/topicicons/tmpl/
@@ -724,15 +726,15 @@ COM_KUNENA_TRASH_CATEGORY="Kategoria"
 COM_KUNENA_TRASH_DATE="Daty"
 COM_KUNENA_TRASH_ID="ID"
 COM_KUNENA_TRASH_TITLE="Tytuł"
-; COM_KUNENA_TRASH_FIELD_INPUT_SEARCHTRASH="Search Trash"
-; COM_KUNENA_TOPICS_FIELD_INPUT_SEARCHTOPIC="Search Topic"
+COM_KUNENA_TRASH_FIELD_INPUT_SEARCHTRASH="Przeszukaj śmietnik"
+COM_KUNENA_TOPICS_FIELD_INPUT_SEARCHTOPIC="Szukaj tematu"
 
 ; JROOT/administrator/components/com_kunena/views/trash/tmpl/purge.php
 
 COM_KUNENA_ITEMS_BEING_DELETED="Pozycje zostały usunięte"
 COM_KUNENA_NUMBER_ITEMS="Liczba pozycji"
 COM_KUNENA_PERM_DELETE_ITEMS="Te pozycje zostaną permanentnie usunięte"
-; COM_KUNENA_WARNING_PERM_DELETE_ITEMS="These %d items will be permanently deleted from your forum! Are you sure?"
+COM_KUNENA_WARNING_PERM_DELETE_ITEMS="Te -n %d element -y/-ów zostanie /-ą trwale usunięte z forum! Ale czy naprawdę jesteś pewien że tego bardzo chcesz? "
 
 ; JROOT/administrator/components/com_kunena/views/trash/view.html.php
 
@@ -792,7 +794,7 @@ COM_KUNENA_MOVEUSERMESSAGES_USERS_CURRENT="Dla użytkowników których wiadomoś
 ; JROOT/administrator/components/com_kunena/views/users/tmpl/default_moderators.php
 
 COM_KUNENA_BATCH_USERS_OPTIONS="Przypisz moderatorow"
-; COM_KUNENA_BATCH_USERS_TIP="Assign selected users to be moderators in the following categories:"
+COM_KUNENA_BATCH_USERS_TIP="Przypisz wybranego użytkownika na moderatora do następujących kategorii"
 
 ; JROOT/administrator/components/com_kunena/views/users/view.html.php
 
