--- a/components/com_kunena/admin/language/pl-PL/pl-PL.plg_quickicon_kunena.sys.ini
+++ b/components/com_kunena/admin/language/pl-PL/pl-PL.plg_quickicon_kunena.sys.ini
@@ -17,5 +17,5 @@ PLG_QUICKICON_KUNENA_UPDATE_NOW="Aktualizuj teraz!"
 PLG_QUICKICON_KUNENA_UPDATE_DISABLED="Aktualizacje wyłączone"
 PLG_QUICKICON_KUNENA_COMPLETE_INSTALLATION="Proszę dokończyć instalajcę Kunena!"
 
-; PLG_QUICKICON_KUNENA_GROUP_DESC="The group of this plugin (this value is compared with the group value used in 'Quick Icons' modules to inject icons)"
+PLG_QUICKICON_KUNENA_GROUP_DESC="Grupa tej wtyczki (ta wartość jest porównywana z wartością grupy używaną w module 'Quick Icons' do wstrzykiwania ikon)"
 PLG_QUICKICON_KUNENA_GROUP_LABEL="Grupa"
