--- a/components/com_kunena/admin/language/tr-TR/tr-TR.plg_quickicon_kunena.sys.ini
+++ b/components/com_kunena/admin/language/tr-TR/tr-TR.plg_quickicon_kunena.sys.ini
@@ -17,5 +17,5 @@ PLG_QUICKICON_KUNENA_UPDATE_NOW="Şimdi güncelle!"
 PLG_QUICKICON_KUNENA_UPDATE_DISABLED="Güncellemeler devre dışı"
 PLG_QUICKICON_KUNENA_COMPLETE_INSTALLATION="Lütfen Kunena kurulumunu tamamlayın"
 
-; PLG_QUICKICON_KUNENA_GROUP_DESC="The group of this plugin (this value is compared with the group value used in 'Quick Icons' modules to inject icons)"
+PLG_QUICKICON_KUNENA_GROUP_DESC="Bu eklentinin grubu (bu değer, 'Hızlı Simgeler' modülündeki dahili simgelerde kullanılan grubun değeri ile karşılaştırılır)"
 PLG_QUICKICON_KUNENA_GROUP_LABEL="Grup"
