--- a/components/com_kunena/admin/language/tr-TR/tr-TR.plg_system_kunena.sys.ini
+++ b/components/com_kunena/admin/language/tr-TR/tr-TR.plg_system_kunena.sys.ini
@@ -14,6 +14,6 @@ PLG_SYSTEM_KUNENA_DESC="Kunena Sistem Eklentisi -- Lütfen silip ya da yayından
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS="Joomla İçerik Eklenti Desteği"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_DESC="Set to <em>Yes</em> if you want to enable all installed Joomla content plugins in your forum. This option allows you to add bad words filtering and much more. Just be careful not to allow users to run any unprivileged tasks."
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET="Eklentileri çalıştırın"
-; PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_DESC="Which data do you want to run Joomla content plugins on? (Hold down CTRL key to click on more)"
+PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_DESC="Joomla içerik eklentileri çalıştırmak için hangi veriyi istiyorsun? (Daha fazlası için CTRL+aşağı tuşlarına basılı tut)"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_TITLES="Başlıklar"
 PLG_SYSTEM_KUNENA_JCONTENTPLUGINS_TARGET_BODIES="Kuruluşlar"
