--- a/components/com_kunena/admin/language/uk-UA/uk-UA.plg_quickicon_kunena.sys.ini
+++ b/components/com_kunena/admin/language/uk-UA/uk-UA.plg_quickicon_kunena.sys.ini
@@ -10,12 +10,12 @@
 
 
 PLG_QUICKICON_KUNENA="Quick Icon - Kunena форуму"
-PLG_QUICKICON_KUNENA_DESC="Посилання на Kunena форум і відображення інформації по наявності оновлення, коли ви відвідуєте сторінку панелі управління."
+PLG_QUICKICON_KUNENA_DESC="Посилання на Kunena форум і відображення інформації з наявності оновлення, коли Ви відвідуєте сторінку панелі управління."
 
-PLG_QUICKICON_KUNENA_UPDATE_ADDONS="Оновлено %d add-ons!"
+PLG_QUICKICON_KUNENA_UPDATE_ADDONS="Оновлено %d додатків!"
 PLG_QUICKICON_KUNENA_UPDATE_NOW="Оновити зараз!"
 PLG_QUICKICON_KUNENA_UPDATE_DISABLED="Оновлення відключено"
 PLG_QUICKICON_KUNENA_COMPLETE_INSTALLATION="Будь ласка, завершіть установку Kunena!"
 
-; PLG_QUICKICON_KUNENA_GROUP_DESC="The group of this plugin (this value is compared with the group value used in 'Quick Icons' modules to inject icons)"
+PLG_QUICKICON_KUNENA_GROUP_DESC="Група цього плагіну (це значення порівнюється з групою значення, що використовується в модулі "_QQ_"Швидкі іконки"_QQ_"/'Quick Icons' для введення іконок)"
 PLG_QUICKICON_KUNENA_GROUP_LABEL="Група"
