--- a/components/com_kunena/site/language/da-DK/da-DK.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/da-DK/da-DK.com_kunena.tpl_blue_eagle.ini
@@ -114,7 +114,7 @@ COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle er standard skabelonen for Kune
 COM_KUNENA_TEMPLATE_DISPLAY_MENU="Vis Kunena Menu"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Vis den aktive Kunena menu i kunena skabelonen. Deaktiver denne funktion hvis du i stedet ønsker at bruge din main menu."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Baggrund på forumoverskrift"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Definer farven på forummet header baggrund"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR="Farve når musen er over fanen"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC="Angiv farven på fanen når musen er over denne."
 COM_KUNENA_TEMPLATE_SKINNER="Bland med Joomla templaten"
