--- a/components/com_kunena/site/language/hi-IN/hi-IN.com_kunena.ini
+++ b/components/com_kunena/site/language/hi-IN/hi-IN.com_kunena.ini
@@ -1,4 +1,231 @@
-; Sorry, this language file hasn't been translated yet.
+; Kunena Forum translation
 ;
-; If you want to help us, please start by reading our documentation on translating Kunena:
-; http://docs.kunena.org/index.php/Translating_Kunena
+; All translations can be found from https://www.transifex.com/projects/p/Kunena/
+; Please join the translation team if you want to contribute your changes to the next release.
+;
+; License GNU General Public License version 3 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+; Using new INI string format for Joomla! 2.5
+
+
+; JROOT/Common strings for both frontend and backend
+
+COM_KUNENA_ACCESS="पहुँच"
+COM_KUNENA_ADMIN="श्रेणी प्रबंधक"
+COM_KUNENA_ADMIN_POLLS="मतदान"
+COM_KUNENA_ADVANCEDDESC="समायोजन"
+COM_KUNENA_ADVANCEDDESCINFO="श्रेणी समायोजन"
+COM_KUNENA_ADVANCEDDISPINFO="श्रेणी प्रदर्शन"
+COM_KUNENA_ANN_ID="आई.डी."
+COM_KUNENA_ATTACH="संलग्नक"
+COM_KUNENA_A_ACCESSTYPE_DESC="इस श्रेणी में प्रयोग किया जाने वाला प्रवेश नियंत्रण प्रकार."
+COM_KUNENA_A_ACCESSTYPE_TITLE="पहुँच नियंत्रण प्रकार :"
+COM_KUNENA_A_CATEGORY_ALIAS="उपनाम:"
+COM_KUNENA_A_DISPLAY="दिखाएं #"
+COM_KUNENA_A_POLL_CATEGORIES_ALLOWED="चुनाव को सक्षम करें"
+; COM_KUNENA_A_POLL_CATEGORIES_ALLOWED_DESC="Set to <em>Yes</em>, if you would like to allow polls in this category."
+COM_KUNENA_BASICSFORUMINFO="श्रेणी का नाम एवं वर्णन"
+COM_KUNENA_BY="से"
+COM_KUNENA_CANCEL="निरस्त"
+COM_KUNENA_CATEGORY="श्रेणी"
+COM_KUNENA_CATEGORY_ANONYMOUS="गुमनाम"
+COM_KUNENA_CATEGORY_ANONYMOUS_ALLOW="गुमनाम संदेशों को अनुमत करें"
+; COM_KUNENA_CATEGORY_ANONYMOUS_ALLOW_DESC="Anonymous messages can be used by registered users to post sensitive information to this category: <b>No user related information</b> will be stored with anonymous messages (including IP address)."
+; COM_KUNENA_CATEGORY_ANONYMOUS_DEFAULT="By default post replies as"
+; COM_KUNENA_CATEGORY_ANONYMOUS_DEFAULT_DESC="If anonymous messages have been enabled, this option selects the default choice for the user. Regular users can later edit their own posts to be anonymous, but only moderators have the ability to edit anonymous posts."
+COM_KUNENA_CATEGORY_CHANNELS="श्रेणी माध्यम"
+; COM_KUNENA_CATEGORY_CHANNELS_DESC="<em>Category Channels</em> allows you to change which topics people will see when they enter to the category. Feature allows you to create <strong>Category Aliases</strong>, <strong>Multi-Category Announcements</strong> and <strong>Category Collections</strong>."
+COM_KUNENA_CATEGORY_INFO="मूल सूचना"
+COM_KUNENA_CATEGORY_PERMISSIONS="श्रेणी अनुमतियाँ"
+COM_KUNENA_CATEGORY_SUBSCRIPTIONS="श्रेणी सब्सक्रिप्शन्स"
+; COM_KUNENA_CATEGORY_TOPIC_ORDERING="Order Topics By"
+; COM_KUNENA_CATEGORY_TOPIC_ORDERING_DESC="Select default topic ordering inside this category."
+COM_KUNENA_CATID="आई.डी."
+; COM_KUNENA_CHECKEDOUT="Check Out"
+COM_KUNENA_CLASS_SFX="श्रेणी सीएसएस क्लास प्रत्यय"
+; COM_KUNENA_CLASS_SFXDESC="CSS suffixes applied to index, showcat, view, and allow for different designs per category."
+COM_KUNENA_DESCRIPTIONADD="वर्णन:"
+COM_KUNENA_EDIT="संपादित करें"
+COM_KUNENA_EDITOR_INSERT="प्रविष्ट करें"
+COM_KUNENA_EMAIL_DISABLED="कोई ईमेल नहीं भेजा/भेजे गए (अनुरोध localhost से किया गया था)"
+COM_KUNENA_EMAIL_INVALID="परिचर्चा मंच ने अवैध पते से ईमेल भेजने की कोशिश की. कृपया साइट व्यवस्थापक से संपर्क करें!"
+COM_KUNENA_ERROR1="वर्ग/श्रेणी का कोई नाम होना चाहिए"
+; COM_KUNENA_ERROR_TOKEN="You have entered information to an obsolete form from another session. Please verify that the user account is yours and please try again!"
+COM_KUNENA_FILENAME="फ़ाईल का नाम:"
+COM_KUNENA_FILESIZE="फ़ाईल का आकार:"
+COM_KUNENA_FILTER="निस्पंदित करें"
+COM_KUNENA_GEN_EMAIL="ई-मेल"
+COM_KUNENA_GEN_REMOVE_FILE="फ़ाईल मिटाएं"
+COM_KUNENA_GEN_SUBJECT="विषय"
+COM_KUNENA_GO="प्रस्थान"
+COM_KUNENA_HEADERADD="श्रेणी शीर्षक:"
+COM_KUNENA_LIB_HTML_DISPLAY_NUM="दिखाएं #"
+COM_KUNENA_LOCKED="बंद"
+COM_KUNENA_LOCKED1="बंद :"
+; COM_KUNENA_LOCKEDDESC="Set to <em>Yes</em> if you want to lock this category. Nobody but Moderators and Admins can create new topics or replies in a locked category (or move posts to it)."
+COM_KUNENA_MESSAGE="संदेश"
+COM_KUNENA_MODERATORS="परिनियामक"
+; COM_KUNENA_MODHEADER="Moderation settings for this category"
+COM_KUNENA_MODNEWDESC="परिनियमन"
+; COM_KUNENA_MODSASSIGNED="Moderators assigned to this category:"
+COM_KUNENA_MYPROFILE_BIRTHDATE="जन्मतिथि"
+COM_KUNENA_MYPROFILE_GENDER="लिंग"
+COM_KUNENA_MYPROFILE_LOCATION="स्थान"
+COM_KUNENA_MYPROFILE_WEBSITE="वेबस्थली"
+COM_KUNENA_NAMEADD="नाम:"
+COM_KUNENA_NO="नहीं"
+; COM_KUNENA_NOMODS="There are no Moderators assigned to this category"
+COM_KUNENA_NO_ACCESS="आपको इस पृष्ठ के भीतर पहुँच की अनुमति नहीं है।"
+COM_KUNENA_PAGE="पृष्ठ:"
+COM_KUNENA_PARENT="अभिभावक:"
+; COM_KUNENA_PARENTDESC="Hint: To create a section, choose <em>Top Level</em> as the parent. A section is a container for categories.<br />Messages can be <strong>only</strong> posted to categories within sections."
+COM_KUNENA_PERMISSIONS="अनुमतियाँ"
+COM_KUNENA_PMS_INBOX="निज़ी संदेश"
+COM_KUNENA_PUBLISHED="प्रकाशित"
+; COM_KUNENA_REORDER="Reorder"
+; COM_KUNENA_RESET="Reset"
+; COM_KUNENA_REV="Review posts:"
+; COM_KUNENA_REVDESC="Set to <em>Yes</em> if you want posts to be reviewed by moderators prior to publishing them in this category. This is useful in a moderated categories only!<br />If you set this without any moderators specified, the site admin is solely responsible for approving/deleting submitted posts since these will be kept 'on hold'!"
+COM_KUNENA_REVIEW="समीक्षा"
+COM_KUNENA_SECTION="खंड"
+COM_KUNENA_SHOW_12_HOURS="12 घंटे"
+COM_KUNENA_SHOW_24_HOURS="24 घंटे"
+COM_KUNENA_SHOW_48_HOURS="48 घंटे"
+COM_KUNENA_SHOW_4_HOURS="4 घंटे"
+COM_KUNENA_SHOW_8_HOURS="8 घंटे"
+COM_KUNENA_SHOW_LASTVISIT="पिछले भ्रमण से अभी तक"
+COM_KUNENA_SHOW_MONTH="माह"
+COM_KUNENA_SHOW_WEEK="सप्ताह"
+COM_KUNENA_SHOW_YEAR="वर्ष"
+COM_KUNENA_STAT_FORUMSTATS="परिचर्चा मंच के आंकड़े"
+COM_KUNENA_SUBSCRIPTIONS="सब्सक्रिप्शन्स"
+; COM_KUNENA_TOPIC_LAST_LINK_TITLE="View Last Post in Topic '%s'"
+COM_KUNENA_UPLOAD_ERROR_CANT_WRITE="डिस्क में फाइल लिखने में विफल."
+COM_KUNENA_UPLOAD_ERROR_EXTRA_CHUNK="AJAX में अतिरिक्त हिस्से हैं."
+COM_KUNENA_UPLOAD_ERROR_NOT_UPLOADED="फ़ाईल अपलोड नहीं हुई थी."
+COM_KUNENA_UPLOAD_ERROR_NO_FILE="कोई फ़ाईल अपलोड नहीं हुई थी."
+COM_KUNENA_UPLOAD_ERROR_NO_TMP_DIR="एक अस्थायी फ़ोल्डर नहीं मिल रहा है."
+COM_KUNENA_UPLOAD_ERROR_PARTIAL="अपलोड की गई फ़ाइल केवल आंशिक रूप से अपलोड हुई थी."
+COM_KUNENA_UPLOAD_ERROR_PHP_EXTENSION="एक PHP Extension ने फ़ाईल अपलोड रोक दिया."
+COM_KUNENA_UPLOAD_ERROR_SIZE="फ़ाइल का आकार व्यवस्थापक द्वारा निर्धारित अधिकतम आकार से अधिक है."
+COM_KUNENA_UPLOAD_ERROR_UNKNOWN="अज्ञात त्रुटि का सामना करना पड़ा."
+COM_KUNENA_UPLOAD_FAILED="'%s' फ़ाईल को अपलोड करने में विफल"
+COM_KUNENA_USERNAME="प्रयोक्तानाम"
+COM_KUNENA_USERNAME_ANONYMOUS="गुमनाम"
+COM_KUNENA_USER_BANNED_DONE="प्रयोक्ता सफलतापूर्वक प्रतिबंधित."
+COM_KUNENA_USER_BLOCKED_DONE="प्रयोक्ता का खाता सफलतापूर्वक अवरुद्ध किया गया."
+; COM_KUNENA_USER_ORDER_ASC="First post first"
+; COM_KUNENA_USER_ORDER_DESC="Last post first"
+COM_KUNENA_USRL_AVATAR="अवतरण"
+COM_KUNENA_USRL_HITS="हिट्स"
+COM_KUNENA_USRL_POSTS="संदेश"
+; COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="View Category '%s'"
+COM_KUNENA_YES="हां"
+; COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="The extensions allowed for avatar upload are : %s"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="आपको आंकड़ों को देखने की अनुमति नहीं है"
+
+; Automatically generated strings for COM_KUNENA_BUTTON_*
+
+COM_KUNENA_BUTTON_ANNOUNCEMENT_DELETE="मिटाना"
+COM_KUNENA_BUTTON_ANNOUNCEMENT_EDIT="संपादित करें"
+COM_KUNENA_BUTTON_ANNOUNCEMENT_LIST="नियंत्रण पैनल"
+COM_KUNENA_BUTTON_CATEGORY_MANAGE="श्रेणियों को व्यवस्थित करें"
+COM_KUNENA_BUTTON_CATEGORY_MANAGE_LONG="श्रेणी प्रबंधक में प्रवेश करें."
+; COM_KUNENA_BUTTON_CATEGORY_MARKREAD="Mark Topics Read"
+COM_KUNENA_BUTTON_CATEGORY_MARKREAD_LONG="इस श्रेणी के सभी विषयों को पढ़ा हुआ चिह्नित करें."
+COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE="सब्सक्राइब्ड करें"
+COM_KUNENA_BUTTON_CATEGORY_SUBSCRIBE_LONG="इस श्रेणी को सब्सक्राइब करें."
+COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE="सबक्रिप्शन समाप्त करें"
+COM_KUNENA_BUTTON_CATEGORY_UNSUBSCRIBE_LONG="इस श्रेणी से सबक्रिप्शन समाप्त करें"
+COM_KUNENA_BUTTON_FORUM_MARKREAD="सभी को पढ़ा हुआ चिह्नित करें"
+COM_KUNENA_BUTTON_FORUM_MARKREAD_LONG="सभी विषयों को पढ़ा हुआ चिह्नित करें."
+; COM_KUNENA_BUTTON_LAYOUT_FLAT="Flat"
+; COM_KUNENA_BUTTON_LAYOUT_FLAT_LONG="Display messages in flat layout."
+; COM_KUNENA_BUTTON_LAYOUT_INDENTED="Indented"
+; COM_KUNENA_BUTTON_LAYOUT_INDENTED_LONG="Display messages in indented layout."
+; COM_KUNENA_BUTTON_LAYOUT_THREADED="Threaded"
+; COM_KUNENA_BUTTON_LAYOUT_THREADED_LONG="Display messages in tree-like layout."
+COM_KUNENA_BUTTON_MESSAGE_APPROVE="अनुमोदन"
+COM_KUNENA_BUTTON_MESSAGE_APPROVE_LONG="इस संदेश को अनुमोदित करें."
+COM_KUNENA_BUTTON_MESSAGE_DELETE="मिटाना"
+COM_KUNENA_BUTTON_MESSAGE_DELETE_LONG="इस संदेश को मिटाएं."
+COM_KUNENA_BUTTON_MESSAGE_EDIT="संपादित करें"
+COM_KUNENA_BUTTON_MESSAGE_EDIT_LONG="इस संदेश को संपादित करें."
+COM_KUNENA_BUTTON_MESSAGE_MODERATE="परिनियमन"
+COM_KUNENA_BUTTON_MESSAGE_MODERATE_LONG="इस संदेश का परिनियामन करें."
+COM_KUNENA_BUTTON_MESSAGE_PERMDELETE="स्थायी रुप से मिटाएं."
+COM_KUNENA_BUTTON_MESSAGE_PERMDELETE_LONG="इस संदेश को स्थायी रुप से मिटाएं."
+COM_KUNENA_BUTTON_MESSAGE_QUICKREPLY="त्वरित उत्तर"
+COM_KUNENA_BUTTON_MESSAGE_QUICKREPLY_LONG="इस संदेश का त्वरित उत्तर दें."
+COM_KUNENA_BUTTON_MESSAGE_QUOTE="उद्वरण"
+COM_KUNENA_BUTTON_MESSAGE_QUOTE_LONG="इस संदेश को उद्धृत करें."
+COM_KUNENA_BUTTON_MESSAGE_REPLY="उत्तर"
+COM_KUNENA_BUTTON_MESSAGE_REPLY_LONG="इस संदेश का उत्तर दें."
+COM_KUNENA_BUTTON_MESSAGE_REPORT="इसे सूचित करें"
+COM_KUNENA_BUTTON_MESSAGE_REPORT_LONG="इस संदेश से परिनियामकों को अवगत कराएं."
+COM_KUNENA_BUTTON_MESSAGE_THANKYOU="धन्यवाद"
+COM_KUNENA_BUTTON_MESSAGE_THANKYOU_LONG="इस संदेश हेतु मैं आपको धन्यवाद देना चाहता हूँ."
+COM_KUNENA_BUTTON_MESSAGE_UNDELETE="पुनर्स्थापित करें"
+COM_KUNENA_BUTTON_MESSAGE_UNDELETE_LONG="इस संदेश को पुनर्स्थापित करें."
+COM_KUNENA_BUTTON_SECTION_MARKREAD="सभी श्रेणियाें को पढ़ा हुआ चिह्नित करें"
+COM_KUNENA_BUTTON_TOPIC_CREATE="नया विषय"
+COM_KUNENA_BUTTON_TOPIC_CREATE_LONG="एक नया विषय बनाएं."
+COM_KUNENA_BUTTON_TOPIC_DELETE="विषय मिटाएं"
+COM_KUNENA_BUTTON_TOPIC_DELETE_LONG="इस विषय को मिटाएं"
+COM_KUNENA_BUTTON_TOPIC_FAVORITE="पसंदीदा"
+COM_KUNENA_BUTTON_TOPIC_FAVORITE_LONG="इस विषय को पसंदीदा बनाएं"
+COM_KUNENA_BUTTON_TOPIC_LOCK="बंद"
+COM_KUNENA_BUTTON_TOPIC_LOCK_LONG="इस विषय को अवरोधित करें."
+COM_KUNENA_BUTTON_TOPIC_MODERATE="विषय का परिनियामन करें"
+COM_KUNENA_BUTTON_TOPIC_MODERATE_LONG="इस विषय का परिनियामन करें."
+COM_KUNENA_BUTTON_TOPIC_REPLY="विषय पर उत्तर दें"
+COM_KUNENA_BUTTON_TOPIC_REPLY_LONG="इस विषय पर उत्तर दें."
+COM_KUNENA_BUTTON_TOPIC_STICKY="चिपकू"
+COM_KUNENA_BUTTON_TOPIC_STICKY_LONG="इस विषय को चिपकू बनाएँ"
+COM_KUNENA_BUTTON_TOPIC_SUBSCRIBE="सब्सक्राइब करें"
+COM_KUNENA_BUTTON_TOPIC_SUBSCRIBE_LONG="इस विषय को सब्सक्राइब करें."
+COM_KUNENA_BUTTON_TOPIC_UNFAVORITE="नापसंद करें"
+COM_KUNENA_BUTTON_TOPIC_UNFAVORITE_LONG="इस विषय को नापसंद करें."
+COM_KUNENA_BUTTON_TOPIC_UNLOCK="खोलें"
+COM_KUNENA_BUTTON_TOPIC_UNLOCK_LONG="इस विषय को खोलें."
+COM_KUNENA_BUTTON_TOPIC_UNSTICKY="असलांगी"
+COM_KUNENA_BUTTON_TOPIC_UNSTICKY_LONG="इस विषय को असलांगी बनाएं."
+COM_KUNENA_BUTTON_TOPIC_UNSUBSCRIBE="सबक्रिप्शन समाप्त करें"
+; COM_KUNENA_BUTTON_TOPIC_UNSUBSCRIBE_LONG="Unsubscribe from this topic."
+COM_KUNENA_BUTTON_TOPIC_UNDELETE="विषय को पुनर्स्थापित करें"
+COM_KUNENA_BUTTON_TOPIC_UNDELETE_LONG="इस विषय को पुनर्स्थापित करें."
+COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY="सबक्रिप्शन समाप्त करें"
+COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY_LONG="इस श्रेणी से सबक्रिप्शन समाप्त करें"
+
+; End of automatically generated strings for COM_KUNENA_BUTTON_*
+
+; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_alphauserpoints/alphauserpoints/activity.php
+
+COM_KUNENA_THANKYOU_GOT_FROM="जिनसे धन्यवाद प्राप्त हुए"
+COM_KUNENA_THANKYOU_SAID_TO="जिन्हें धन्यवाद दिया गया"
+
+; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_community/community/activity.php
+
+COM_KUNENA_READMORE="और पढ़ें...."
+
+; JROOT/components/com_kunena/
+
+COM_KUNENA_ANN_ANNOUNCEMENTS="घोषणाएं"
+COM_KUNENA_A_GEN_NEWCHAR="नया"
+COM_KUNENA_BACK="पीछे जाएं"
+COM_KUNENA_DELETE="मिटाना"
+COM_KUNENA_EDITOR_HELPLINE_OPTION="मतदान : मतदान हेतु विकल्प"
+COM_KUNENA_ERROR_SESSION_SAVE_FAILED="कुनैना : सत्र की सूचना सुरक्षित करने में असफल !"
+COM_KUNENA_GEN_MODERATED="श्रेणी परिनियामित है. प्रकाशित करने से पहले समीक्षा कर ली गई है."
+COM_KUNENA_MANAGE_ATTACHMENTS="संलग्‍नक प्रबंधक"
+COM_KUNENA_MYPROFILE_GENDER_FEMALE="महिला"
+COM_KUNENA_MYPROFILE_GENDER_MALE="पुरुष"
+COM_KUNENA_MYPROFILE_GENDER_UNKNOWN="अपरिचित"
+COM_KUNENA_PMS_INBOX_NEW="नया व्यक्तिगत संदेश : %s"
+COM_KUNENA_POST_LOCK_SET="यह विषय बंद कर दिया गया है."
+COM_KUNENA_SEARCH_ADVSEARCH="उन्नत खोज"
+COM_KUNENA_SEARCH_SORTBY_VIEWS="विचारों की संख्‍या"
+COM_KUNENA_TOGGLER_COLLAPSE="संक्षिप्त करें"
+COM_KUNENA_TOGGLER_EXPAND="विस्तारित करें"
+COM_KUNENA_USRL_SEARCH="प्रयाेक्ता को खोजें"
