--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.ini
@@ -122,8 +122,8 @@ COM_KUNENA_USRL_HITS="İzlenim"
 COM_KUNENA_USRL_POSTS="Gönderiler"
 COM_KUNENA_VIEW_CATEGORY_LIST_CATEGORY_TITLE="Kategori Görüntüle '%s'"
 COM_KUNENA_YES="Evet"
-; COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="The extensions allowed for avatar upload are : %s"
-; COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="You aren't allowed to see statistics"
+COM_KUNENA_AVATAR_UPLOAD_NOT_VALID_EXTENSIONS="Avatar yükleme için izin verilen uzantılar: %s"
+COM_KUNENA_STATS_NOT_ALLOWED_TOSEE_STATS="İstatistikleri görmek için izniniz yok."
 
 ; Automatically generated strings for COM_KUNENA_BUTTON_*
 
@@ -193,8 +193,8 @@ COM_KUNENA_BUTTON_TOPIC_UNSTICKY="Sabit Değil"
 COM_KUNENA_BUTTON_TOPIC_UNSTICKY_LONG="Bu konu sabitliğini kaldır"
 COM_KUNENA_BUTTON_TOPIC_UNSUBSCRIBE="Abonelikten Çık"
 COM_KUNENA_BUTTON_TOPIC_UNSUBSCRIBE_LONG="Bu konu aboneliğini bitir."
-; COM_KUNENA_BUTTON_TOPIC_UNDELETE="Restore Topic"
-; COM_KUNENA_BUTTON_TOPIC_UNDELETE_LONG="Restore this topic."
+COM_KUNENA_BUTTON_TOPIC_UNDELETE="Konuyu Onar"
+COM_KUNENA_BUTTON_TOPIC_UNDELETE_LONG="Bu konuyu onar."
 COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY="Abonelikten Çık"
 COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY_LONG="Kategori Aboneliğinden Çık"
 
@@ -202,8 +202,8 @@ COM_KUNENA_BUTTON_UNSUBSCRIBE_CATEGORY_LONG="Kategori Aboneliğinden Çık"
 
 ; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_alphauserpoints/alphauserpoints/activity.php
 
-; COM_KUNENA_THANKYOU_GOT_FROM="Received Thank You From"
-; COM_KUNENA_THANKYOU_SAID_TO="Said Thank You To"
+COM_KUNENA_THANKYOU_GOT_FROM="Alınan Teşekkür"
+COM_KUNENA_THANKYOU_SAID_TO="Edilen Teşekkür"
 
 ; JROOT/administrator/components/com_kunena/install/plugins/plg_kunena_community/community/activity.php
 
