--- a/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/tr-TR/tr-TR.com_kunena.tpl_blue_eagle.ini
@@ -15,7 +15,7 @@ COM_KUNENA_FAVORITE="Favori"
 COM_KUNENA_MYPOSTS="Benim gönderilerimi içersin"
 COM_KUNENA_TOPIC_STARTED_ON="Konu başlatılma"
 COM_KUNENA_VIEW_NO_POSTS="Bu kategoride gönderi yok."
-; COM_KUNENA_VIEW_NO_TOPICS="There are no topics to display."
+COM_KUNENA_VIEW_NO_TOPICS="Gösterilecek konu yok."
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/category/default.php
 
@@ -69,7 +69,7 @@ COM_KUNENA_GEN_GOTO="Git"
 
 COM_KUNENA_REPORT="Yetkiliye Raporla"
 COM_KUNENA_THANKYOU="Şu kullanıcı(lar) Teşekkür etti"
-; COM_KUNENA_THANKYOU_MORE_USERS="and this user have %s others thankyou"
+COM_KUNENA_THANKYOU_MORE_USERS="ve bu kullanıcının diğerlerinden %s teşekkürü var"
 
 ; JROOT/components/com_kunena/template/blue_eagle/html/topic/default_pollresults.php
 
@@ -110,19 +110,19 @@ COM_KUNENA_USRL_REGISTERED_USERS="%s sitesinde <strong>%d</strong> kayıtlı kul
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
-; COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle is the default template for Kunena."
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU="Display Kunena Menu"
-; COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Display active Kunena menu inside Kunena template. Disable this feature if you want to use your main menu instead."
+COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle varsayılan Kunena şablonudur."
+COM_KUNENA_TEMPLATE_DISPLAY_MENU="Kunena Menü Göster"
+COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Kunena şablonu içinde etkin Kunena menüsünü görüntüler. Bunun yerine ana menüyü kullanmak istiyorsanız, bu özelliği devre dışı bırakın."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Forum Başlığı Arkaplanı"
-; COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Define the color of the forum header background"
+COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND_DESC="Forum başlığı arka plan rengini tanımlayın"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR="Hover Tab Color"
 COM_KUNENA_TEMPLATE_HOVER_TAB_COLOR_DESC="Enter the color of the menu tab when hovered over."
 COM_KUNENA_TEMPLATE_SKINNER="Blend with Joomla Template"
 COM_KUNENA_TEMPLATE_SKINNER_DESC="Automatically blend the default template with the colors or you Joomla template."
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR="Toggler Color"
 COM_KUNENA_TEMPLATE_TOGGLER_COLOR_DESC="Enter the color of the section toggler button."
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Load Responsive CSS"
-; COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Load responsive CSS to make the template to fit into mobile devices. This feature needs a responsive Joomla template to work correctly."
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS="Responsive CSS Yükle"
+COM_KUNENA_TEMPLATE_LOAD_RESPONSIVE_CSS_DESC="Mobil cihazlarda kullanılabilir ekranlar için responsive CSS yükle. Bu özelliğin düzgün çalışması için responsive Joomla şablonu gerekiyor."
 
 ; Removed strings
 
