--- a/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.tpl_blue_eagle.ini
+++ b/components/com_kunena/site/language/uk-UA/uk-UA.com_kunena.tpl_blue_eagle.ini
@@ -110,7 +110,7 @@ COM_KUNENA_USRL_REGISTERED_USERS="%s має <strong>%d</strong> зареєстр
 
 ; JROOT/components/com_kunena/template/blue_eagle/template.xml
 
-COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle - це шаблон за умовчанням для Kunena."
+COM_KUNENA_TEMPLATE_BLUE_EAGLE3_DESC="Blue Eagle - це типовий шаблон для Kunena."
 COM_KUNENA_TEMPLATE_DISPLAY_MENU="Показати меню Kunena"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC="Показати активне меню Kunena всередині шаблону Kunena. Вимкніть цю можливість, якщо ви хочете використовувати головне меню."
 COM_KUNENA_TEMPLATE_FORUM_HEADER_BACKGROUND="Фон шапки форуму"
